CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-07 10:49:16
+lastsearch = 2024-08-07 12:46:10
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -32,9 +32,9 @@ title = Discovery of a novel third-generation EGFR inhibitor and ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
-match = -223.5%%
-title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiWQFnH0E&sig=ACfU3U1-mBLIo_ItnZyyraiqxZTn9NczAQ&hl=en&sa=X&ved=2ahUKEwjBu8Ta_OGHAxXVEFkFHd00MaUQ6AF6BAgaEAM
+match = -200.0%%
+title = Reactive Oxygen Species in Chemistry, Biology, and Medicine
+url = https://books.google.com/books?id=p5LkBwAAQBAJ&pg=PA123&lpg=PA123&dq=chan+5+kg+kq+song&source=bl&ots=XG0v3p64If&sig=ACfU3U2-hToyKQWgZUCA1LKE7JE0RWUMAQ&hl=en&sa=X&ved=2ahUKEwj-yLHrluKHAxXZtokEHQYmCl8Q6AF6BAgZEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
