--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-08-07 04:23:35
+lastsearch = 2024-08-07 12:47:42
 
 [shopee.vn]
 match = -45.8%%
@@ -19,7 +19,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 [demxanh.com]
 match = -25.0%%
 title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html?srsltid=AfmBOoqMLqKTz6cIrHv8kUnl9GeRlRrArligzuW0q-TF2zcTiyN--W9c
+url = https://demxanh.com/chieu-dieu-hoa.html
 
 [goni.vn]
 match = 4.2%%
@@ -39,7 +39,7 @@ url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
 [sieuthidem.vn]
 match = 50.0%%
 title = Chiếu điều hoà Tencel - Hà Nội
-url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/?srsltid=AfmBOorqSB-NHKr60c30LIy0LLsDaBkXLS5B32jt14ENo9bMLxUFzZ3Z
+url = https://sieuthidem.vn/product-category/chan-ga-goi/chieu-dieu-hoa-tencel/
 
 [cungnhaulamgiau.vn]
 match = 4.2%%
