--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-07 09:50:37
+lastsearch = 2024-08-07 12:59:00
 
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOopqv3l-lto2NBaI1eNNot1-Unr7Iv4YiLm0j0o5DrCvccf2T7ra
 
 [www.amazon.com]
 match = -91.7%%
@@ -349,7 +349,7 @@ url = https://pc.fsu.edu/
 [books.google.com]
 match = -316.7%%
 title = Gazetteer - Issues 11-13 - Page 24 - Google Books Result
-url = https://books.google.com/books?id=tTo9AAAAIAAJ&pg=RA1-PA24&lpg=RA1-PA24&dq=ga+phu+uc+16&source=bl&ots=BHZDmwFz0p&sig=ACfU3U1vOS69Hp-p7AWTQ04f-c5bpcBYhA&hl=en&sa=X&ved=2ahUKEwif1876hOGHAxWLJTQIHZTCAfIQ6AF6BAgkEAM
+url = https://books.google.com/books?id=tTo9AAAAIAAJ&pg=RA1-PA24&lpg=RA1-PA24&dq=ga+phu+uc+16&source=bl&ots=BHZEdqFy3p&sig=ACfU3U210yoR9XnLh95-8JKcIoC-CNIUHQ&hl=en&sa=X&ved=2ahUKEwjt6srameKHAxW-AHkGHcNSAdEQ6AF6BAgkEAM
 
 [issuu.com]
 match = -175.0%%
