--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Singapore Gold 5 gối Pyeoda 16
 url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.html
 
 [demxanh.com]
-match = -40.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac.html
+match = -120.0%%
+title = Top 8 thương hiệu nệm bông ép chất lượng nhất hiện nay!
+url = https://demxanh.com/top-thuong-hieu-nem-bong-ep-chat-luong-nhat-hien-nay.html
 
 [www.facebook.com]
 match = -75.0%%
