--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-07 11:59:27
+lastsearch = 2024-08-07 12:54:15
 
 [www.diepxuan.com]
 match = 18.8%%
 title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+url = https://www.diepxuan.com/nem-bong/tui-nem.html?srsltid=AfmBOorxkEUy0hVTxibrrYo5IZWMxr7Aunpxxp2Qn-QxgUj6-GIA84z7
 
 [demxanh.com]
 match = -181.2%%
