--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-07 11:33:40
+lastsearch = 2024-08-07 13:00:15
 
 [everon.online]
 match = 12.0%%
@@ -13,13 +13,13 @@ url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
 match = -32.0%%
-title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
+title = Bộ chăn bốn mùa Hoa Ngọt Ngào - ESM24015 - Everon
+url = https://everonchinhhang.vn/products/bo-chan-bon-mua-hoa-ngot-ngao-esm24015
 
 [everonvn.com.vn]
-match = -8.0%%
-title = Chăn bốn mùa Everon Es-1802 giảm giá 40%%
-url = https://everonvn.com.vn/everon/2393/chan-bon-mua-es-1802?srsltid=AfmBOopNKjc3ZDjJRO18wGes4sUYz3mWFdKrVEw9e-8xj8Bh0ldd0-do
+match = 28.0%%
+title = Báo giá chăn 4 mùa Everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -52,9 +52,9 @@ title = Bán căn hộ chung cư tại Đường 129, , Huyện Thăng Bình ...
 url = https://batdongsan.com.vn/ban-can-ho-chung-cu-duong-129-516/dt-tu-50m2-den-80m2-1pn
 
 [www.youtube.com]
-match = -80.0%%
-title = Hào Khí Việt Nam ♫ Quý Dương ♫ Việt Nam ơi, giống hùng ...
-url = https://www.youtube.com/watch?v=whphnvJAYkQ
+match = -96.0%%
+title = Vở bài tập Toán lớp 5 - trang 69, 70 - Bài 136: Luyện tập ...
+url = https://www.youtube.com/watch?v=U84zJdnzJak
 
 [bdshanoi.com.vn]
 match = -4.0%%
@@ -74,7 +74,7 @@ url = https://www.canhociputra.com/ban-can-ho-chung-cu-ciputra/ban-gap-can-ho-4-
 [www.everonvni.vn]
 match = 24.0%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOoo1Hlo7_tyAC5WQZpapnyVKllzkxJ7s-kCEXccE-bbrwQAXQsPY
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
 
 [format.com.vn]
 match = -100.0%%
