--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-07 09:45:43
+lastsearch = 2024-08-07 12:55:14
 
 [www.facebook.com]
 match = -141.2%%
@@ -142,14 +142,14 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -152.9%%
-title = Wen Dan Tang: A Potential Jing Fang Decoction for ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8955743/
+match = -229.4%%
+title = Indoor tanning early in life is associated with increased risk ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8446110/
 
 [books.google.com]
 match = -217.6%%
 title = Mao's Crusade: Politics and Policy Implementation in China's ...
-url = https://books.google.com/books?id=9pPxwn6EvR4C&pg=PA127&lpg=PA127&dq=chan+4+kg+mao+tan&source=bl&ots=XSXIYBm85o&sig=ACfU3U1721D7fwhmPFIExtKVGH08EPOA0g&hl=en&sa=X&ved=2ahUKEwjW4rGmoeGHAxWKFlkFHSHHO4MQ6AF6BAgqEAM
+url = https://books.google.com/books?id=9pPxwn6EvR4C&pg=PA127&lpg=PA127&dq=chan+4+kg+mao+tan&source=bl&ots=XSXJPve95j&sig=ACfU3U13b09fmkILPEdvoazJ0826ux05Sw&hl=en&sa=X&ved=2ahUKEwjIwdHumOKHAxU7lYkEHZbFHHMQ6AF6BAgsEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
