--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-07 11:49:10
+lastsearch = 2024-08-07 12:58:19
 
 [hk.linkedin.com]
-match = 0.0%%
-title = Coco Chan - Hoi Lai Kok
-url = https://hk.linkedin.com/in/coco-chan-935486254
+match = -123.1%%
+title = Chan cocoo - Freelance (Self employed)
+url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
 match = -38.5%%
@@ -32,9 +32,9 @@ title = That Mama: Coco Chan, Founder Of Voltage PR ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
-match = -307.7%%
-title = #stitch with @Steven Chan Hoi Sing I broke my leg running to ...
-url = https://www.tiktok.com/@mamakkofficial/video/7371338212553280811
+match = -200.0%%
+title = #stitch with @Steven Chan Hoi Sing #dance #lekker
+url = https://www.tiktok.com/@goodguy_goodlife/video/7378585999766572321
 
 [admissions.hku.hk]
 match = -38.5%%
@@ -117,9 +117,9 @@ title = South China Morning Post: Breaking China, Asia, HK News ...
 url = https://www.scmp.com/asia
 
 [www.facebook.com]
-match = -384.6%%
-title = 2018年度J3 - J12全港兒童繪畫比賽- J5組(2012 ...
-url = https://www.facebook.com/photo.php?fbid=1963553563689998&id=966751760036855&set=a.1019627311415966&locale=zh_HK
+match = -15.4%%
+title = Coco Alexandra Chan
+url = https://www.facebook.com/CocoAlexandraChan/
 
 [tel.directory.gov.hk]
 match = -146.2%%
