--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-08-07 12:20:06
+lastsearch = 2024-08-07 12:52:12
 
 [demxanh.com]
 match = -14.8%%
@@ -140,4 +140,9 @@ url = https://spacet.vn/blog/nguon-cam-hung/huong-dan-giat-chieu-dieu-hoa-dung-c
 match = 18.5%%
 title = Chiếu (Ga) Điều Hòa Viscose mát - Kyoryo
 url = https://kyoryo.vn/chieu-cao-cap/chieu-dieu-hoa-viscose.html
+
+[timikid.com]
+match = -18.5%%
+title = Chiếu Điều Hoà Cho Bé Bằng Sợi Mây Thoáng Mát, Trải ...
+url = https://timikid.com/chieu-dieu-hoa-cho-be-bang-soi-may-thoang-mat-trai-dem-va-noi-kich-thuoc-60x110cm
 
