--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-07 11:44:35
+lastsearch = 2024-08-07 12:49:27
 
 [demxanh.com]
-match = 34.6%%
-title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+match = 3.8%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOooThIQsCjaft1cyB83P7Mac2uvNh02_PbZOay6A4YnkyKpNIL-h
 
 [thegioidemviet.vn]
 match = -15.4%%
@@ -24,7 +24,7 @@ url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html
 [foreverbedding.net]
 match = -53.8%%
 title = Giải Đáp Thắc Mắc Nên Mua Chiếu Điều Hòa Hay Chiếu Trúc?
-url = https://foreverbedding.net/nen-mua-chieu-dieu-hoa-hay-chieu-truc
+url = https://foreverbedding.net/nen-mua-chieu-dieu-hoa-hay-chieu-truc?srsltid=AfmBOooy_EvyxAz_gtkjb4Ak8n_XfDIUbwB3w6EPNtn7a7zy9CdcdclS
 
 [chieutrelanlan.com]
 match = 42.3%%
@@ -42,9 +42,9 @@ title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
 url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.lazada.vn]
-match = 42.3%%
-title = Chiếu Lụa điều Hòa Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/chiếu-lụa-điều-hòa/
+match = -46.2%%
+title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html?srsltid=AfmBOoo6vTRp3nmYnBxes_dlo7vxccJumDZfFAI4Wd7gejrSeCF20TVc
 
 [nanara.vn]
 match = 7.7%%
