--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-08-07 09:12:12
+lastsearch = 2024-08-07 12:59:56
 
 [tuananh.vn]
-match = -72.7%%
-title = Đệm bông ép
-url = https://tuananh.vn/dem-bong-ep-c51.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
-match = -48.0%%
-title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+match = -28.0%%
+title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [shopee.vn]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 [www.youtube.com]
 match = -16.7%%
 title = Đệm Tuấn Anh
-url = https://www.youtube.com/channel/UC1lyuex0oy3RBLBffNrjtMw/videos
+url = https://www.youtube.com/@emtuananh5547/videos
 
 [sieuthinem.com]
 match = 32.0%%
@@ -72,9 +72,9 @@ title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm
 url = https://www.facebook.com/photo.php?fbid=663632295792539&id=100064373242328&set=a.663634505792318
 
 [demviethome.vn]
-match = -40.0%%
-title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
+match = -52.0%%
+title = Đệm bông ép Tuấn Anh 3M Korea Valize giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3m-korea-valize/
 
 [m.facebook.com]
 match = -76.0%%
@@ -105,4 +105,9 @@ url = http://www.entershopping.vn/dem-bong-ep-tuan-anh-korea-gam.html
 match = 33.3%%
 title = Đệm lò xo Tuấn Anh
 url = https://demtot.com/dem-lo-xo-tuan-anh/
+
+[demgiare.net]
+match = -33.3%%
+title = dem-tuan-anh
+url = https://demgiare.net/newstag/dem-tuan-anh
 
