--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-07 11:18:12
+lastsearch = 2024-08-07 12:52:33
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -27,9 +27,9 @@ title = Margaret Tempero, MD
 url = https://profiles.ucsf.edu/margaret.tempero
 
 [www.ncbi.nlm.nih.gov]
-match = -173.7%%
-title = Evaluation of the Extent of Variant Histology in Urothelial ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8988952/
+match = -152.6%%
+title = SARS-CoV-2 detection, viral load and infectivity over ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7323671/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -407,7 +407,7 @@ title =
 url = https://www.prnewswire.com/news-releases/announcing-the-2024-us-presidential-scholars-in-the-arts-302141477.html
 
 [dcc.ligo.org]
-match = -152.6%%
-title = https://dcc.ligo.org/public/0150/M1800027/005/LSC-...
+match = -78.9%%
+title = LSC Feb 2018 author list (tex) - LIGO DCC
 url = https://dcc.ligo.org/public/0150/M1800027/005/LSC-Authors-Feb-2018.tex
 
