CI images update

--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-07 12:30:35
+lastsearch = 2024-08-07 13:25:23
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -5.0%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -15.0%%
+title = Abraham Palmer - UCSD Profiles
+url = https://profiles.ucsd.edu/abraham.palmer
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -57,14 +57,14 @@ title = Christopher Dvorak, MD
 url = https://profiles.ucsf.edu/christopher.dvorak
 
 [www.ncbi.nlm.nih.gov]
-match = -130.0%%
-title = Exercise in patients with inflammatory bowel diseases
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5743119/
+match = -10.0%%
+title = Bacterial Terpenome - PMC
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8107197/
 
 [profiles.ucla.edu]
-match = 0.0%%
-title = Stanley F Nelson
-url = https://profiles.ucla.edu/stanley.nelson
+match = -41.7%%
+title = Antoni Ribas
+url = https://profiles.ucla.edu/antoni.ribas
 
 [www.sec.gov]
 match = -20.0%%
@@ -307,9 +307,9 @@ title = WE AIN'T CRAZY!
 url = https://www.ochealthinfo.com/sites/hca/files/import/data/files/25864.pdf
 
 [profiles.stanford.edu]
-match = -25.0%%
-title = Kevin Schulman - Stanford Profiles
-url = https://profiles.stanford.edu/kevin-schulman
+match = -30.0%%
+title = Ramsey Cheung - Stanford Profiles
+url = https://profiles.stanford.edu/ramsey-cheung
 
 [publichealth.lacounty.gov]
 match = -155.0%%
@@ -425,4 +425,14 @@ url = https://s3.amazonaws.com/files.oncologymeetings.org/prod/s3fs-public/2024-
 match = -65.0%%
 title = fogarty-icohrta-program-review-2008.pdf
 url = https://www.fic.nih.gov/About/Staff/Policy-Planning-Evaluation/Documents/fogarty-icohrta-program-review-2008.pdf
+
+[www.aetna.com]
+match = -150.0%%
+title = Vascular Endothelial Growth Factor Inhibitors for Ocular ...
+url = https://www.aetna.com/cpb/medical/data/700_799/0701.html
+
+[rais.ornl.gov]
+match = -70.0%%
+title = Ecological soil screening levels for zinc
+url = https://rais.ornl.gov/documents/eco-ssl_zinc.pdf
 
