--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-07 12:48:22
+lastsearch = 2024-08-07 13:19:51
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Happiness Việt Nam | Hanoi
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -21.4%%
-title = Bộ ga gối trải giường 2m2x2m bo chun miễn phí, bộ ...
-url = https://shopee.vn/Bộ-ga-gối-trải-giường-2m2x2m-bo-chun-miễn-phí-bộ-ga-giường-cotton-poly-mềm-mịn-thấm-hút-mồ-hôi-Happy-Home-i.600110082.20851466621
+match = -32.1%%
+title = Bộ chăn ga gối, ga giường, vỏ chăn, vỏ gối drap nệm ga ...
+url = https://shopee.vn/Bộ-chăn-ga-gối-ga-giường-vỏ-chăn-vỏ-gối-drap-nệm-ga-chun-ra-giường-chăn-ga-gối-đệm-Happy-Home-i.600110082.15146634205
 
 [chandem.com.vn]
 match = 17.9%%
@@ -62,9 +62,9 @@ title = Bộ chăn ga Everon SR-16
 url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
-match = -21.4%%
-title = Bộ chăn ga gối 2 người 1m6 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ chăn ga gối 2 người 1m6
+match = 3.6%%
+title = Bộ ga gối lụa 5 món hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ ga gối lụa 5 món
 
 [changagoidemsonghong.com]
 match = 0.0%%
@@ -135,4 +135,9 @@ url = http://www.changagoidemeveron.vn/3/everon/bo-chan-dong-everon-micro-poly-m
 match = 28.6%%
 title = Bộ Chăn Ga Gối Tencel Hoàng Gia H16
 url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-h16
+
+[songhong.info]
+match = 0.0%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://songhong.info/chan-ga-goi-bc16
 
