--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-07 05:20:03
+lastsearch = 2024-08-07 13:21:15
 
 [www.everonvn.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
 
 [shopee.vn]
-match = -114.3%%
-title = Ruột Gối Đầu Bông Gòn trắng tinh, Kích thước tiêu chuẩn ...
-url = https://shopee.vn/Ruột-Gối-Đầu-Bông-Gòn-trắng-tinh-Kích-thước-tiêu-chuẩn-45x65-và-ruột-ôm-35*105-i.5009645.19422327424
+match = 28.6%%
+title = Ruột gối bông hạt 45x65(1 chiếc)
+url = https://shopee.vn/Ruột-gối-bông-hạt-45x65(1-chiếc)-i.169472495.5409480657
 
 [www.diepxuan.com]
 match = 4.8%%
