--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-08-07 12:36:27
+lastsearch = 2024-08-07 13:22:40
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -120.0%%
+title = City Breaks and Short Breaks 2024 / 2025
+url = https://www.tui.co.uk/holidays/city-breaks
 
 [www.travelgossip.co.uk]
 match = 0.0%%
