CI images update

--- a/images/nem-everon-200x200x9/config.ini
+++ b/images/nem-everon-200x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-200x200x9.html
 lastopen = 2024-06-06 17:10:44
 
 [search]
-lastsearch = 2024-08-07 10:59:21
+lastsearch = 2024-08-07 13:40:45
 
 [www.everonvn.vn]
 match = -120.0%%
@@ -44,7 +44,7 @@ url = https://demxanh.com/bang-gia-nem-foam-oyasumi.html
 [thegioidemonline.com]
 match = -140.0%%
 title = Bảng giá đệm xơ dừa mới nhất 2022 tại Thế giới đệm Online
-url = https://thegioidemonline.com/bang-gia-dem-xo-dua.html?srsltid=AfmBOoph08ygTNLKVVllG8Z-M4u2ijljt0yHcpEb5JqmOzssVQO_r_WO
+url = https://thegioidemonline.com/bang-gia-dem-xo-dua.html
 
 [thegioidemdep.com]
 match = -125.0%%
