--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-07 13:21:15
+lastsearch = 2024-08-07 13:49:38
 
 [www.everonvn.vn]
 match = 0.0%%
@@ -12,14 +12,14 @@ title =
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
 
 [shopee.vn]
-match = 28.6%%
-title = Ruột gối bông hạt 45x65(1 chiếc)
-url = https://shopee.vn/Ruột-gối-bông-hạt-45x65(1-chiếc)-i.169472495.5409480657
+match = -100.0%%
+title = Ruột gối hơi bông gòn cao cấp kháng khuẩn mẫu hoa nhí ...
+url = https://shopee.vn/Ruột-gối-hơi-bông-gòn-cao-cấp-kháng-khuẩn-mẫu-hoa-nhí-kích-thước-45x65cm-i.441837062.20823110424
 
 [www.diepxuan.com]
-match = 4.8%%
-title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html
+match = 42.9%%
+title = Ruột gối kê hoa 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 
 [elambo.vn]
 match = -90.5%%
@@ -37,9 +37,9 @@ title = Ruột gối đầu hoa nhí ruột gối nằm cao cấp kích thước
 url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html
 
 [demxanh.com]
-match = -81.0%%
-title = Ruột gối Kim Cương chính hãng giá tốt nhất thị trường
-url = https://demxanh.com/ruot-goi-kim-cuong.html
+match = 23.8%%
+title = Ruột gối bông Kim Cương Muji 45x65
+url = https://demxanh.com/ruot-goi-bong-kim-cuong-muji-45x65.html
 
 [demhong.vn]
 match = -33.3%%
