--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-07 11:31:15
+lastsearch = 2024-08-07 13:48:38
 
 [ninhouse.vn]
-match = -161.5%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi
+match = -146.2%%
+title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [www.lamido.vn]
 match = 46.2%%
@@ -185,4 +185,24 @@ url = https://tanmydesign.com/vo-goi/
 match = -253.8%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
 url = https://demxanh.com/vo-goi.html
+
+[vinasun.vn]
+match = -276.9%%
+title = Vinasun Taxi - Tổng đài đặt xe duy nhất (028) 38 27 27 27
+url = https://vinasun.vn/
+
+[www.exactanalytical.com.my]
+match = -115.4%%
+title = Home – Exact Analytical Sdn. Bhd.
+url = https://www.exactanalytical.com.my/
+
+[www.federalpaint.com.my]
+match = 0.0%%
+title = Federal Paint
+url = https://www.federalpaint.com.my/home/
+
+[www.eah.com.my]
+match = -20.0%%
+title = eah.com.my
+url = http://www.eah.com.my/
 
