--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-07 12:42:02
+lastsearch = 2024-08-07 13:46:58
 
 [hoa18.com]
-match = -87.5%%
-title = Sản phẩm
-url = https://hoa18.com/shop/page/8
+match = -126.3%%
+title = Tiết lộ ý nghĩa phong thủy của nụ tầm xuân hút tài ...
+url = https://hoa18.com/thong-tin/tiet-lo-y-nghia-phong-thuy-cua-nu-tam-xuan-hut-tai-loc-trong-nam-moi
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
 title = Mệnh khuyết HOẢ: 18 phương pháp cải vận hiệu quả
-url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua
+url = https://kallos.co/blogs/philosophy/menh-khuyet-hoa-18-phuong-phap-cai-van-hieu-qua?srsltid=AfmBOoqh0bjep9s0RPZHRqcBXofZXjFl5rPEFjzGLJbGk510NsQBXaPT
 
 [www.facebook.com]
 match = -47.4%%
