--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-08-07 12:55:35
+lastsearch = 2024-08-07 13:50:20
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -440,4 +440,9 @@ url = https://pgboard.eu/enh/vi/lắc-xúc-thế-giới-mới
 match = -7.7%%
 title = Bản đồ Trường
 url = https://hnue.edu.vn/gioithieu/bandotruong
+
+[vishipel.com.vn]
+match = -253.3%%
+title = Về việc thiết lập mới phao báo hiệu hàng hải chuyên dùng “D1” ...
+url = https://vishipel.com.vn/ve-viec-thiet-lap-moi-phao-bao-hieu-hang-hai-chuyen-dung-d1-d2-gioi-han-khu-vuc-thi-cong-cong-trinh-nha-may-dien-gio-ca-mau-1d.htm
 
