--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-07 10:42:15
+lastsearch = 2024-08-07 13:44:52
 
 [demxanh.com]
-match = 42.4%%
-title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+match = -9.1%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -62,9 +62,9 @@ title = Chia sẻ những địa chỉ mua chiếu trúc tăm uy tín ở thành
 url = https://chieutrelanlan.com/chia-se-nhung-dia-chi-mua-chieu-truc-tam-uy-tin-o-thanh-pho-ho-chi-minh-k57.html
 
 [vongxepsaigon.vn]
-match = 3.0%%
-title = Chiếu trúc chiếu tre 1m6 hạt nâu đen hàng tốt loại 1
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m6-hat-nau-den-hang-tot-loai-1-2/
+match = -30.3%%
+title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-160cm/
 
 [caicachhanhchinhhungyen.com.vn]
 match = 0.0%%
