--- a/images/goi-om-re-to/config.ini
+++ b/images/goi-om-re-to/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/goi-om-re-to.html
 lastopen = 2024-06-10 00:44:39
 
 [search]
-lastsearch = 2024-08-07 11:36:34
+lastsearch = 2024-08-07 13:45:34
 
 [dvan.org]
 match = -41.7%%
@@ -237,7 +237,12 @@ title = Gối Bà Bầu Giá Rẻ
 url = https://goibabau.vn/danh-muc/goi-ba-bau-vai-vn/
 
 [nemtanphu.com]
-match = -200.0%%
-title = Gối Ôm Lông Vũ WinWin Mềm Mịn Bồng Bềnh Giá Rẻ
-url = https://nemtanphu.com/goi-om-long-vu-winwin/
+match = -216.7%%
+title = Gối Ôm Cao Su Kim Cương Honey Chính Hãng Giá Rẻ
+url = https://nemtanphu.com/goi-om-cao-su-kim-cuong-honey/
+
+[www.fae.house]
+match = -8.3%%
+title = GOI BOTTOMS NERO - FAE
+url = https://www.fae.house/products/goi-bottoms-nero
 
