--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-07 13:24:04
+lastsearch = 2024-08-07 13:51:45
 
 [xoptraisan.info]
 match = -115.8%%
@@ -12,14 +12,14 @@ title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
 url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamaulac.com.vn]
-match = -31.6%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -78.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [thamvinhthuan.com]
-match = 15.8%%
-title = Thảm Xốp Vân Gỗ 60 x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-van-go-60-x-60-cm/
+match = 5.3%%
+title = Thảm xốp một màu 60cm x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
 
 [thamht.vn]
 match = 36.8%%
@@ -32,9 +32,9 @@ title = thảm ghép 60x60cm giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
 
 [thamtretho.com]
-match = -36.8%%
-title = Thảm xốp cho bé hình cỏ (60 x 60cm x 9mm)
-url = https://thamtretho.com/tham-co
+match = 37.5%%
+title = Thảm xốp 60x60cm
+url = https://thamtretho.com/tham-xop-60x60cm
 
 [vatlieulotsan.com]
 match = -73.7%%
