--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-08-07 12:46:56
+lastsearch = 2024-08-07 13:37:40
 
 [www.everonqb.com]
 match = 0.0%%
@@ -22,8 +22,8 @@ title = Bộ chăn ga gối Everon ES1804
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 
 [www.diepxuan.com]
-match = 34.8%%
-title = Vỏ gối ôm ES1715 80x100 - Điệp Xuân
+match = 43.5%%
+title = Điệp Xuân Vỏ gối ôm ES1715 80x100
 url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html
 
 [forum.cartridgecollectors.org]
@@ -82,12 +82,12 @@ title = Giá vỏ gối ôm 80x100 ở đâu rẻ nhất tháng 07/2024 - Trang 
 url = https://sieuthidienmaypico.com/tag/vo-goi-om-80x100-ti/?trang=4
 
 [dienmayhc.com]
-match = 13.0%%
-title = Vỏ gối ôm EVERON ES1804 - Điện Máy HC
+match = -65.2%%
+title = Vỏ gối ôm EVERON ES1804 - Gối ôm Nhà sản xuất Everon ...
 url = https://dienmayhc.com/vo-goi-om-everon-es1804-nsh544784719.html
 
 [muathongminh.vn]
-match = -69.6%%
-title = Vỏ Gối Ôm Hàn Quốc K-Bedding by Everon Cool Flex ...
+match = -87.0%%
+title = Vỏ Gối Ôm Hàn Quốc K-Bedding by Everon Cool Flex 80x100cm ...
 url = https://muathongminh.vn/vo-goi-om-han-quoc-k-bedding-by-everon-cool-flex-80x100cm-kcsp-p.1__24353936627__300998460
 
