--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -42,9 +42,9 @@ title = Chiếu trúc Quế Lâm loại 1 cao cấp ( loại có 2 mắt ngọc)
 url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-co-2-mat-ngoc-duo-c-kie-m-ha-ng-42210887-117572298.html
 
 [www.lazada.vn]
-match = 0.0%%
-title = Chiếu Trúc Hạt Quế Lâm hàng loại 1 tem xanh 1m2, 1m5 ...
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-hang-loai-1-tem-xanh-1m2-1m5-1m6-i732230394.html
+match = 3.6%%
+title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
 
 [thegioidemonline.com]
 match = -39.3%%
