--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-07 12:37:48
+lastsearch = 2024-08-07 13:48:05
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -77,9 +77,9 @@ title = Man who fought HOA over $500 mailbox and won says his ...
 url = https://www.washingtonpost.com/local/public-safety/man-who-fought-hoa-over-500-mailbox-and-won-says-his-mailbox-was-vandalized/2017/03/14/aacbdfc4-08cb-11e7-93dc-00f9bdd74ed1_story.html
 
 [www.tiktok.com]
-match = -35.3%%
-title = Hoa Person for The 4th of July
-url = https://www.tiktok.com/discover/hoa-person-for-the-4th-of-july
+match = -111.8%%
+title = I need advice #lawyer #hoa #taylorswift | hoa
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.steadily.com]
 match = 0.0%%
@@ -297,9 +297,9 @@ title = The Reinstatement of Covenants, Conditions, and ...
 url = https://www.floridabar.org/the-florida-bar-journal/the-reinstatement-of-covenants-conditions-and-restrictions-extinguished-by-the-marketable-record-title-act/
 
 [books.google.com]
-match = -105.9%%
-title = The Monthly Army List - Google Books Result
-url = https://books.google.com/books?id=rEVEAQAAIAAJ&pg=RA69-PP7&lpg=RA69-PP7&dq=man+in+hoa+dep+14&source=bl&ots=kbdofcdZjY&sig=ACfU3U3A_36ufFIJE1sq7xYIWCBnQiGXxQ&hl=en&sa=X&ved=2ahUKEwjw1-X7lOKHAxWtF1kFHZLFA9YQ6AF6BAgXEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+14&source=bl&ots=rUQ7wpCz93&sig=ACfU3U02LPvBS6L2isGtxoHzuWG45JU8gw&hl=en&sa=X&ved=2ahUKEwiGl-vWpOKHAxVwOjQIHU1-BVcQ6AF6BAgmEAM
 
 [www.house.gov]
 match = 11.8%%
