CI images update

--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-08-07 12:39:15
+lastsearch = 2024-08-07 14:33:00
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -43,8 +43,8 @@ url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
 match = -125.0%%
-title = USD to PHP forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-php-forecast-today-dollar-to-philippines-peso
+title = USD to JPY forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-jpy-forecast-converter-dollar-to-yen
 
 [www.akc.org]
 match = -45.0%%
