--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-07 10:20:47
+lastsearch = 2024-08-07 14:27:37
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOopEwUS1nTofcHOGgyVIuajH3yJCKgLriGnmts9Tc1lOxivcLf-V
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
 match = -13.8%%
@@ -49,7 +49,7 @@ url = https://russo.vn/chieu-dieu-hoa-cao-su-non/
 [thegioidemonline.com]
 match = 37.9%%
 title = Chiếu điều hòa cao su non Tencel màu Ghi
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html?srsltid=AfmBOor4_aR2-ozaEicioiSr4Bauq26iXFcAw-mjlCuog_7DBaRDqrhF
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
 
 [shopee.vn]
 match = -27.6%%
