--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-07 00:26:24
+lastsearch = 2024-08-07 14:31:54
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -116.0%%
-title = Địa chí Bắc Giang: địa lý và kinh tế - Page 302 - Google Books Result
-url = https://books.google.com/books?id=QIFuAAAAMAAJ&pg=PA302&lpg=PA302&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=7KD-Bc_WyJ&sig=ACfU3U3LfAVq8HaFxCCkw5cPk6KD9lDgmA&hl=en&sa=X&ved=2ahUKEwiT5qi-8eCHAxWiElkFHbpPHW8Q6AF6BAgbEAM
+match = -100.0%%
+title = Minh Mệnh chính yếu - Volume 3 - Page 23 - Google Books Result
+url = https://books.google.com/books?id=MZIBAAAAMAAJ&pg=PA23&lpg=PA23&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=KDClK4mxRq&sig=ACfU3U07ujwH33NneqNZfOpurgThDBTUng&hl=en&sa=X&ved=2ahUKEwjAkIy8ruKHAxX4LkQIHXFJI0QQ6AF6BAgYEAM
 
 [cellphones.com.vn]
 match = -52.0%%
