--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-07 11:24:57
+lastsearch = 2024-08-07 14:36:41
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -350,4 +350,9 @@ url = http://dulichthanhhoa.com.vn/Phan-Thiet.html
 match = -60.7%%
 title = Sẽ mở rộng cao tốc đoạn Cao Bồ - Mai Sơn lên 6 làn xe ...
 url = https://vov.vn/xa-hoi/se-mo-rong-cao-toc-doan-cao-bo-mai-son-len-6-lan-xe-vao-thang-112024-post1112399.vov
+
+[bvhttdl.gov.vn]
+match = -42.9%%
+title = Điểm báo hoạt động ngành Văn hóa, Thể thao và Du ...
+url = https://bvhttdl.gov.vn/diem-bao-hoat-dong-nganh-van-hoa-the-thao-va-du-lich-ngay-7-8-2024-20240807105758293.htm
 
