--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-08-07 13:43:29
+lastsearch = 2024-08-07 14:31:32
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -12,9 +12,9 @@ title = Bảng Giá Đệm Everon Năm 2024
 url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [akasi.com.vn]
-match = -45.0%%
-title = Đệm bông ép Hàn Quốc - KORE - Akasi
-url = https://akasi.com.vn/san-pham/dem-bong-ep-han-quoc-kore/
+match = 10.0%%
+title = ĐỆM BÔNG ÉP EVERON - Akasi
+url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
 
 [everon365.vn]
 match = 16.7%%
@@ -49,12 +49,12 @@ url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 [demxanh.com]
 match = -140.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOop0i2wN0_tvwYIEk7bh5ksoGvf9TI8xbpkLOPmIxSjsuqMbLOhw
 
 [thegioidemonline.com]
 match = -40.0%%
 title = Bảng giá nệm Sông Hồng mới nhất 2022
-url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html
+url = https://thegioidemonline.com/bang-gia-nem-song-hong-moi-nhat-2019.html?srsltid=AfmBOoqglaubvxbZChooqudedRplG3HudC_TXhZbQtQ_yULRuBPVsX4p
 
 [www.diepxuan.com]
 match = 0.0%%
