--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-07 06:40:51
+lastsearch = 2024-08-07 14:26:38
 
 [www.reddit.com]
 match = -82.6%%
@@ -52,9 +52,9 @@ title = N. KOREAN PATROL BOATS SEIZE U.S. SPY SHIP WITH ...
 url = https://www.cia.gov/readingroom/document/06638269
 
 [www.instagram.com]
-match = 0.0%%
-title = 
-url = https://www.instagram.com/lol_nemesis/
+match = -91.3%%
+title = Boozy kirsch soaked cherry, cacao nibs, chocolate ...
+url = https://www.instagram.com/p/BM7bH3EDUMB/?hl=hu
 
 [wanderingchopsticks.blogspot.com]
 match = -43.5%%
@@ -585,4 +585,9 @@ url = https://logangreenhouse.com/wp-content/uploads/2023/08/Inventory-8-25.pdf
 match = -43.5%%
 title = Ribbon Builder - Texas Military Department
 url = https://tmd.texas.gov/ribbon-builder
+
+[edition.cnn.com]
+match = -43.5%%
+title = CNN: Breaking News, Latest News and Videos
+url = https://edition.cnn.com/
 
