--- a/images/tham-giuong-ii-180x200/config.ini
+++ b/images/tham-giuong-ii-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-180x200.html
 lastopen = 2024-06-17 21:09:53
 
 [search]
-lastsearch = 2024-08-07 12:52:52
+lastsearch = 2024-08-07 14:33:19
 
 [www.diepxuan.com]
-match = 40.9%%
-title = Thảm giường nỉ 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-180x200.html?srsltid=AfmBOorpgz0orNSfrkJ3CGjS5LsGagl0cvJQcWNQfhJo1LhY_6C3LpBA
+match = 50.0%%
+title = Điệp Xuân Thảm giường nỉ 180x200
+url = https://www.diepxuan.com/tham-giuong-ni-180x200.html
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOorFBkhmCez2CFlbWTn757a8nw0PTXI-Gw5VuSwUFJ7vKPu5pv0-
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [www.lazada.vn]
 match = -59.1%%
 title = Thảm nỉ nhung trải giường GC ( 1 Ga + 2 vỏ gối ...
-url = https://www.lazada.vn/products/tham-ni-nhung-trai-giuong-gc-1-ga-2-vo-goi-nam-i1022858922.html?srsltid=AfmBOooC_VI-vWy3kOe0bt2wKjwMIXttMizjNUrR_n0pxoT-6VM5NY_p
+url = https://www.lazada.vn/products/tham-ni-nhung-trai-giuong-gc-1-ga-2-vo-goi-nam-i1022858922.html
 
 [noithatlongthai.com]
 match = -13.6%%
@@ -102,9 +102,9 @@ title = Eksternt link - Filskov Friskole
 url = https://filskovfriskole.skoleporten.dk/sp/298936/iframe?address=http://xn--e1aaa3bd0cza.xn--p1ai/95DwMiUfe43v
 
 [tonybed.com]
-match = -4.5%%
-title = Bộ Drap Ga Trải Giường Modal - 21
-url = https://tonybed.com/bo-drap-ga-trai-giuong-modal-21/
+match = -36.4%%
+title = Bộ Drap Ga Trải Giường Tencel Màu – TCM46
+url = https://tonybed.com/bo-drap-ga-trai-giuong-tencel-mau-tcm46/
 
 [covacu.com]
 match = 28.6%%
@@ -133,7 +133,7 @@ url = https://www.sieuthinem.vn/nem-cao-su-5-zone-aloe-kim-cuong.html
 
 [0869125101.taphoa.so]
 match = -81.8%%
-title = Ga - Gối - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
+title = Chăn - Ga - Đệm Hàn Quốc EVERON . Thảm trải giường 180x200
 url = https://0869125101.taphoa.so/products/tham-trai-giuong-180x200-E4b8FaEqXyei7JaD9JrXQk
 
 [m.thitruongsi.com]
