--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-08-07 10:19:02
+lastsearch = 2024-08-07 14:33:57
 
 [www.diepxuan.com]
-match = 5.3%%
-title = Túi nệm - Điệp Xuân
-url = https://www.diepxuan.com/nem-bong/tui-nem.html
+match = -20.8%%
+title = Điệp Xuân Chiếu trúc Quế Lâm I 180x200
+url = https://www.diepxuan.com/chieu-truc-que-lam-i-180x200.html
 
 [www.tui.co.uk]
 match = -58.3%%
