CI images update

--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-07 10:25:00
+lastsearch = 2024-08-07 14:46:35
 
 [www.tiktok.com]
 match = -235.3%%
@@ -68,8 +68,8 @@ url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
 match = -194.1%%
-title = Bradshaw's General Railway and Steam Navigation Guide for ...
-url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ7woAy1_&sig=ACfU3U0STtMsb90Gg9tL0a0Asms1juw4Fg&hl=en&sa=X&ved=2ahUKEwiuqryk9-GHAxVfD1kFHe1wA_kQ6AF6BAgaEAM
+title = The Globe Pronouncing Gazetteer of the World: Descriptive ...
+url = https://books.google.com/books?id=tBMXAAAAYAAJ&pg=PA426&lpg=PA426&dq=man+in+hoa+dep+16&source=bl&ots=FE9QZkrQcD&sig=ACfU3U0t0OGw70VQkjyf-KU2oFB1kcwuyg&hl=en&sa=X&ved=2ahUKEwirspHgseKHAxW4EVkFHfwJFO4Q6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
