--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-07 12:58:00
+lastsearch = 2024-08-07 15:00:24
 
 [munghoangphat.com]
-match = 12.0%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-xanh.html
+match = -80.0%%
+title = Mùng chụp đỉnh vuôn 1m6 cao cấp, hàng chất lượng sản xuất ...
+url = https://munghoangphat.com/-1-cua-mung-dinh-vuong-1m6-x-2m-cao-cap.html
 
 [tiki.vn]
 match = -28.0%%
@@ -17,9 +17,9 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -48.0%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = 4.0%%
+title = Màn chụp tự bung đỉnh vuông gia khánh loại 1 ...
+url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-gia-khánh-loại-1-Việt-Nam-1.6m-1.8m-2m-cao-1m70-mùng-chụp-đỉnh-rộng-hàng-đẹp-i.275105053.4839350056
 
 [www.mungbaobao.com]
 match = 48.0%%
@@ -33,8 +33,8 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 
 [www.mantubung.com]
 match = -52.0%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+title = Màn Xếp Vuông | Mùng Gấp Vuông Thông Minh Người Lớn ...
+url = https://www.mantubung.com/man-xep-vuong.html
 
 [demvip.vn]
 match = 52.0%%
@@ -42,9 +42,9 @@ title = Màn chụp tự bung đỉnh vuông cao cấp
 url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 
 [www.lazada.vn]
-match = 28.0%%
-title = Mùng Tự Bung đỉnh Vuông Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/mung-tu-bung-dinh-vuong/
+match = 4.0%%
+title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
+url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html?srsltid=AfmBOoqmFkN9AbeYkO4gr555x-cWjXWK_wtPBr8ufnztIwDq_1UNQB77
 
 [everonvn.com.vn]
 match = 0.0%%
