CI images update

--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-07 13:53:48
+lastsearch = 2024-08-07 15:54:25
 
 [www.instagram.com]
 match = -123.1%%
@@ -107,9 +107,9 @@ title = WAI SENG CHAN - Senior Sales Associate - Christian Dior ...
 url = https://my.linkedin.com/in/wai-seng-chan-791010270
 
 [www.dior.com]
-match = -123.1%%
-title = The Lady 95.22 Bag - News & Défilés
-url = https://www.dior.com/en_us/fashion/news-fashion-shows/folder-news-and-events/95-22
+match = -30.8%%
+title = Dior official website
+url = https://www.dior.com/en_hk
 
 [www.gettyimages.fr]
 match = -253.8%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -230.8%%
-title = South Korea: First lady's Dior bag shakes ... - BBC
+match = -261.5%%
+title = South Korea: First lady's Dior bag shakes country's ...
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
@@ -375,4 +375,9 @@ url = https://www.elle.vn/tin-thoi-trang/cua-hang-pop-up-cua-bst-dioriviera-2024
 match = -261.5%%
 title = View of Leslie Cheung: a Fashion Pioneer, a Dandy and ...
 url = https://zmj.unibo.it/article/view/19527/18122
+
+[www.zoominfo.com]
+match = -138.5%%
+title = Christian Dior Couture: Employee Directory
+url = https://www.zoominfo.com/pic/christian-dior-couture/507370824
 
