--- a/images/chieu-truc-thai-den-160x200/config.ini
+++ b/images/chieu-truc-thai-den-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
 lastopen = 2024-06-30 02:08:23
 
 [search]
-lastsearch = 2024-08-07 12:21:10
+lastsearch = 2024-08-07 15:53:02
 
 [demxanh.com]
 match = 37.0%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html
+url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOoqnS-4jnWAR3vTzm8QXlieJQcQu7yGK_ZNGT3DpwVWRCGOuWChV
 
 [demre.com.vn]
 match = 66.7%%
@@ -44,7 +44,7 @@ url = https://thegioidemviet.vn/chieu-truc/
 [www.diepxuan.com]
 match = 63.0%%
 title = Điệp Xuân Chiếu trúc Thái đen 160x200
-url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html
+url = https://www.diepxuan.com/chieu-truc-thai-den-160x200.html?srsltid=AfmBOoqKV-qkBQpzq-zYPOeGMm9OfEzj7L8bWAAJoO8AmhPj81CNgrk9
 
 [shopee.vn]
 match = -18.5%%
