--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-07 13:51:06
+lastsearch = 2024-08-07 15:59:58
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -17.9%%
-title = TUYỂN DỤNG KỸ THUẬT VIÊN SPA | QUẢNG NGÃI ...
-url = https://m.facebook.com/groups/1529017447196745/posts/7543439745754455/
+match = -25.0%%
+title = Tuyển Dụng Spa HCM | *** CẦN TUYỂN GẤP 05 KỸ ...
+url = https://m.facebook.com/groups/313116276409731/posts/1020387965682555/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -87,9 +87,9 @@ title = Sáng 17/9, đã 15 ngày không ghi nhận ca mắc mới COVID ...
 url = http://soyte.hatinh.gov.vn/tin-tuc-su-kien/sang-17-9-da-15-ngay-khong-ghi-nhan-ca-mac-moi-covid-19-o-co.html
 
 [med.loship.vn]
-match = -57.1%%
-title = Vistar Pharmacy - Phạm Văn Chiêu - Giao nhanh trong 1 giờ
-url = https://med.loship.vn/vistarpharmacyphamvanchieu
+match = -53.6%%
+title = Nhà Thuốc Hiệu Thuốc Thiên Phúc 2 - Giao nhanh trong 1 giờ
+url = https://med.loship.vn/nhathuochieuthuocthienphuc2
 
 [medlatec.vn]
 match = -25.0%%
