--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-08-07 14:53:54
+lastsearch = 2024-08-07 15:57:13
 
 [www.diepxuan.com]
 match = 48.0%%
 title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoq-jhrXwZwOKo2AF7ZiS3FFQq7ytSnC5TnBckmA8VBhjv_MN1vL
 
 [www.facebook.com]
 match = 20.0%%
@@ -17,14 +17,14 @@ title = Chiếu Trúc Tre Việt Nam | Hanoi
 url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
 
 [demxanh.com]
-match = -20.0%%
-title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
-url = https://demxanh.com/chieu-truc-hat-huong-truc.html
+match = 16.0%%
+title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
+url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html?srsltid=AfmBOoqyMuzwwktnDhP96JM6qirte05on7f8quscpkNGiTwmkgpJBnee
 
 [chieucoi.com.vn]
-match = -52.0%%
-title = Shop - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
-url = https://chieucoi.com.vn/shop/
+match = -60.0%%
+title = Chiếu nhựa - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
+url = https://chieucoi.com.vn/danh-muc/chieu-nhua/
 
 [tchome.vn]
 match = 36.0%%
@@ -52,9 +52,9 @@ title = BÁO GIÁ CHIẾU TRE TÂY BẮC CHẤT LƯỢNG 100%% - Kho đệm
 url = https://khodem.vn/bao-gia-chieu-tre-tay-bac-chat-luong-100/
 
 [shopee.vn]
-match = -36.0%%
-title = Chiếu nhựa - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chiếu/nhựa
+match = -44.0%%
+title = Chiếu Nhựa Mai Huyền Hà Nội 1,5m , 1,6m , 1m8,1m8x3m ...
+url = https://shopee.vn/Chiếu-Nhựa-Mai-Huyền-Hà-Nội-1-5m-1-6m-1m8-1m8x3m-1m8x4m-i.81313558.12532512757
 
 [demviethome.vn]
 match = -24.0%%
