--- a/images/man-re-trang-12/config.ini
+++ b/images/man-re-trang-12/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/man-re-trang-12.html
 lastopen = 2024-06-07 00:52:43
 
 [search]
-lastsearch = 2024-08-07 12:31:37
+lastsearch = 2024-08-07 15:49:57
 
 [burningman.org]
-match = 0.0%%
-title = 
+match = -60.0%%
+title = The 10 Principles of Burning Man
 url = https://burningman.org/about/10-principles/
 
 [www.usatoday.com]
@@ -1210,4 +1210,9 @@ url = https://abc13.com/
 match = -26.7%%
 title = Space Window Celebration
 url = https://cathedral.org/visit-tour/space-window-celebration/
+
+[www.wjfw.com]
+match = -87.5%%
+title = wjfw.com
+url = https://www.wjfw.com/
 
