--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-08-07 15:00:24
+lastsearch = 2024-08-07 15:58:35
 
 [munghoangphat.com]
-match = -80.0%%
-title = Mùng chụp đỉnh vuôn 1m6 cao cấp, hàng chất lượng sản xuất ...
-url = https://munghoangphat.com/-1-cua-mung-dinh-vuong-1m6-x-2m-cao-cap.html
+match = -24.0%%
+title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
+url = https://munghoangphat.com/
 
 [tiki.vn]
 match = -28.0%%
@@ -22,9 +22,9 @@ title = Màn chụp tự bung đỉnh vuông gia khánh loại 1 ...
 url = https://shopee.vn/Màn-chụp-tự-bung-đỉnh-vuông-gia-khánh-loại-1-Việt-Nam-1.6m-1.8m-2m-cao-1m70-mùng-chụp-đỉnh-rộng-hàng-đẹp-i.275105053.4839350056
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
+match = 24.0%%
+title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Viền Chân
+url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -44,7 +44,7 @@ url = https://demvip.vn/products/man-chup-tu-bung-dinh-vuong-cao-cap
 [www.lazada.vn]
 match = 4.0%%
 title = MÙNG CHỤP TỰ BUNG ĐỈNH VUÔNG MÀN CHỤP KIỂU ...
-url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html?srsltid=AfmBOoqmFkN9AbeYkO4gr555x-cWjXWK_wtPBr8ufnztIwDq_1UNQB77
+url = https://www.lazada.vn/products/mung-chup-tu-bung-dinh-vuong-man-chup-kieu-dang-tien-loi-cho-cac-phong-ngu-i1921294227.html
 
 [everonvn.com.vn]
 match = 0.0%%
