--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-07 13:18:47
+lastsearch = 2024-08-07 15:47:31
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -38.1%%
-title = A Dictionary of Music and Musicians
-url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8FeHI1qe&sig=ACfU3U3BdkUTfhm0Ag5Dj3NqVxYi7x0R9g&hl=en&sa=X&ved=2ahUKEwiB-buQnuKHAxUKI0QIHWk0CFYQ6AF6BAgcEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKDo5wrsh&sig=ACfU3U3Po-fKMw2qidbLovjOnB2FVigxlg&hl=en&sa=X&ved=2ahUKEwjg3tWvv-KHAxXSD1kFHcOuM2gQ6AF6BAhBEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -244,7 +244,7 @@ url = https://www.orpha.net/en/disease/detail/444
 [nempacboston.org]
 match = -47.6%%
 title = Events from June 18, 2022 – June 16, 2023
-url = https://nempacboston.org/events/list/?tribe-bar-date=2022-02-02
+url = https://nempacboston.org/events/list/?tribe-bar-date=2021-09-01
 
 [www.jcog.com.tr]
 match = -142.9%%
