--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-07 10:44:50
+lastsearch = 2024-08-07 15:53:23
 
 [www.lazada.vn]
-match = -44.4%%
-title = Nem Cao Su Non Day Giá Tốt T06/2024
-url = https://www.lazada.vn/tag/nem-cao-su-non-day/
+match = -94.4%%
+title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/nem-sieu-nhe/
 
 [m.facebook.com]
 match = -161.1%%
@@ -17,14 +17,14 @@ title = Người Việt Bolsa/Orange County | 💥💥💥 Nem chua lá ổi Bì
 url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2885626441587720/
 
 [www.instagram.com]
-match = -50.0%%
-title = NEM Furniture JSC (@nemfurniturejsc)
-url = https://www.instagram.com/nemfurniturejsc/?hl=en
+match = -138.9%%
+title = NAN atelier | |𝐅𝐄𝐄𝐃𝐁𝐀𝐂𝐊| My Muse with Nem dress ♥️ ✨ ...
+url = https://www.instagram.com/nan__atelier/p/C801bPgPbAg/?locale=代办圣诞岛判决书模版/样本联系{威信+TG/飞机:@buth2788}ayls6??????ѧ??ƾc6a4Y&hl=am-et
 
 [thegioinem.com]
-match = -111.1%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -122.2%%
+title = Nệm Vạn Thành 5cm, 10cm, 15cm, 20cm giá bao nhiêu?
+url = https://thegioinem.com/nem-van-thanh-5cm--10cm-15cm--20cm.html
 
 [cotienfoods.vn]
 match = -72.2%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -138.9%%
-title = Buffet nem nướng 39k và nước mía khổng lồ 15k full ...
-url = https://www.tiktok.com/@50motbua/video/7367416773156539664
+match = -172.2%%
+title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
+url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
 
 [vi.wikipedia.org]
 match = -27.8%%
