--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-07 11:35:33
+lastsearch = 2024-08-07 16:01:22
 
 [en.wikipedia.org]
 match = -31.2%%
@@ -159,7 +159,7 @@ url = https://www.aljazeera.com/news/2024/7/19/on-north-koreas-tense-border-swis
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=0938baf10882972d&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwi6iu2Gh-KHAxXME1kFHXw2O-IQsZYEegQIURAC
+url = https://www.google.com/search?sca_esv=b5919fffce7396f9&sca_upv=1&q=Was+Park+Chung+Hee+assassinated?&sa=X&ved=2ahUKEwiJruS7wuKHAxVaEFkFHfgvLs0QsZYEegQIUxAC
 
 [produccionesitaca.es]
 match = -21.4%%
