--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-08-07 13:51:45
+lastsearch = 2024-08-07 15:49:36
 
 [xoptraisan.info]
 match = -115.8%%
@@ -12,14 +12,14 @@ title = Thảm xốp Tường Lâm - thương hiệu hàng Việt Nam chất ...
 url = https://xoptraisan.info/tham-xop-tuong-lam-cao-cap
 
 [thamaulac.com.vn]
-match = -78.9%%
-title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
-url = https://thamaulac.com.vn/
+match = -31.6%%
+title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
+url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
 
 [thamvinhthuan.com]
-match = 5.3%%
-title = Thảm xốp một màu 60cm x 60 cm
-url = https://thamvinhthuan.com/san-pham/tham-xop-mot-mau-van-caro-60-x-60-cm/
+match = 26.3%%
+title = Thảm xốp hoạt hình 60 x 60 cm
+url = https://thamvinhthuan.com/san-pham/tham-xop-hoat-hinh-60-x-60-cm/
 
 [thamht.vn]
 match = 36.8%%
@@ -42,9 +42,9 @@ title = Thảm Xốp Mặt Nỉ - Kho Vật Liệu Trải Sàn TPHCM
 url = https://vatlieulotsan.com/danh-muc-san-pham/tham-xop/tham-xop-mat-ni/
 
 [tiki.vn]
-match = -94.7%%
-title = Thảm xốp lót sàn 60x60 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm xốp lót sàn 60x60
+match = -126.3%%
+title = Combo 10 tấm xốp ghép mặt thảm nỉ, hình vuông 60cm x ...
+url = https://tiki.vn/combo-10-tam-xop-ghep-mat-tham-ni-hinh-vuong-60cm-x-60cm-tam-mau-do-do-hang-viet-nam-san-xuat-day-0-65cm-tam-p76388672.html
 
 [thamsami.com]
 match = -84.2%%
