--- a/images/tui-nem-korea-tuan-anh-18/config.ini
+++ b/images/tui-nem-korea-tuan-anh-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-18.html
 lastopen = 2024-06-10 01:34:06
 
 [search]
-lastsearch = 2024-08-07 14:52:52
+lastsearch = 2024-08-07 15:52:41
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông ép 3 mảnh Korea Gấm
-url = https://tuananh.vn/dem-bong-ep-korea-gam--p110.html
+match = 22.2%%
+title = Đệm Korea Gấm Plus
+url = https://tuananh.vn/dem-korea-gam-plus-p223.html
 
 [demxanh.com]
 match = -28.0%%
 title = Đệm bông ép Tuấn Anh Korea gấm Plus chính hãng
-url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html?srsltid=AfmBOoovOyQ3M0bw_Z6kNNpOwyF0rAt7Ke2q8X4uLlTifvakh1BxHQsD
+url = https://demxanh.com/dem-bong-ep-tuan-anh-korea-gam-plus.html
 
 [demkhangduy.com]
 match = 25.0%%
@@ -34,7 +34,7 @@ url = https://shopee.vn/Đệm-lò-xo-túi-kore-Tuấn-Anh-_180x200x24cm_hành-c
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOoorh29ovEbO-rRexiHh6iDCI3ZMRbYlM6ZE1knhBUdSRinYNlsz
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [entershopping.vn]
 match = -36.0%%
