--- a/images/tui-tuan-anh-180x200/config.ini
+++ b/images/tui-tuan-anh-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-tuan-anh-180x200.html
 lastopen = 2024-06-17 10:42:51
 
 [search]
-lastsearch = 2024-08-07 10:23:57
+lastsearch = 2024-08-07 15:58:13
 
 [www.diepxuan.com]
 match = 26.3%%
@@ -17,9 +17,9 @@ title = Đệm Lò xo túi Adaptive Tuấn Anh
 url = https://demkhangduy.com/dem-lo-xo-tui-adaptive-tuan-anh
 
 [demxanh.com]
-match = -100.0%%
-title = Đệm lò xo túi Tuấn Anh Adaptive Pocket (Cuộn) dày 25cm
-url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive-pocket-cuon.html
+match = 10.0%%
+title = Đệm lò xo túi Tuấn Anh Adaptive
+url = https://demxanh.com/dem-lo-xo-tui-tuan-anh-adaptive.html
 
 [tuananh.vn]
 match = 10.0%%
@@ -27,14 +27,14 @@ title = LÒ XO TÚI RUBY POTENCY
 url = https://tuananh.vn/site/Product/446?name=lo-xo-tui-ruby-potency
 
 [dem24h.vn]
-match = -35.0%%
-title = Đệm Lò Xo Túi Cuộn Adaptive Tuấn Anh
-url = https://dem24h.vn/dem-lo-xo-tui-cuon-adaptive-tuan-anh
+match = 20.0%%
+title = Đệm Lò Xo Tuấn Anh Raina
+url = https://dem24h.vn/dem-lo-xo-tui-raina-korea
 
 [demviethome.vn]
-match = -140.0%%
-title = Đệm lò xo túi Tuấn Anh Adaptive chính hãng giá rẻ hà nội. ...
-url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive/
+match = -135.0%%
+title = Đệm lò xo Tuấn Anh Adaptive Pocket Cuộn giá rẻ hà nội. ...
+url = https://demviethome.vn/dem-lo-xo-tuan-anh-tui-adaptive-pocket-cuon/
 
 [bedding.vn]
 match = -25.0%%
@@ -62,9 +62,9 @@ title = Explicit poets [V0y26d]
 url = https://www.middlesex.mass.edu/templateinframes/?Site=Help&Url=https://xn--80aboyjk.xn--p1ai/njhwzet7vah4m01-173333ytcomamafe85
 
 [demtot.com]
-match = -15.0%%
-title = Đệm Lò Xo Túi Màu Cân Bằng Nhiệt
-url = https://demtot.com/dem-lo-xo-adaptive-tui-mau/
+match = 10.0%%
+title = Đệm lò xo túi Acness
+url = https://demtot.com/dem-lo-xo-tui-acnes/
 
 [www.instagram.com]
 match = -95.0%%
