CI images update

--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-07 15:56:09
+lastsearch = 2024-08-07 16:18:12
 
 [www.facebook.com]
 match = -141.2%%
@@ -149,7 +149,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8446110/
 [books.google.com]
 match = -217.6%%
 title = Mao's Crusade: Politics and Policy Implementation in China's ...
-url = https://books.google.com/books?id=9pPxwn6EvR4C&pg=PA127&lpg=PA127&dq=chan+4+kg+mao+tan&source=bl&ots=XSXJPwehbf&sig=ACfU3U0ubzDiExPcmtIMjVBEiJ2cMnAmvw&hl=en&sa=X&ved=2ahUKEwik5u2mweKHAxXRM1kFHe57AfEQ6AF6BAgrEAM
+url = https://books.google.com/books?id=9pPxwn6EvR4C&pg=PA127&lpg=PA127&dq=chan+4+kg+mao+tan&source=bl&ots=XSXJPwgadh&sig=ACfU3U2V8Ae5tUcXpmMbF1ZJidryvcJkjw&hl=en&sa=X&ved=2ahUKEwiu4M-dxuKHAxVlEFkFHVOdK_sQ6AF6BAgsEAM
 
 [s.click.aliexpress.com]
 match = -141.2%%
