--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-07 05:26:28
+lastsearch = 2024-08-07 16:25:49
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = -38.5%%
-title = Ngo Dinh Diem
-url = https://en.wikipedia.org/wiki/Ngo_Dinh_Diem
+match = 0.0%%
+title = Ho Chi Minh City
+url = https://en.wikipedia.org/wiki/Ho_Chi_Minh_City
 
 [books.google.com]
 match = -43.5%%
@@ -435,4 +435,9 @@ url = https://thaibinh.gov.vn/upload/80571/20240418/1206-CV-TA_896ce.pdf
 match = -4.3%%
 title = ATM and Branch Finder in Vietnam
 url = https://www.hsbc.com.vn/en-vn/contact/branch-finder/
+
+[phaata.com]
+match = -73.9%%
+title = Thai Binh ZIP code - The most updated Thai Binh postal ...
+url = https://phaata.com/en/zip-code/thai-binh-zip-code-1249.html
 
