--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-07 13:48:38
+lastsearch = 2024-08-07 16:23:04
 
 [ninhouse.vn]
 match = -146.2%%
@@ -47,9 +47,9 @@ title = UltraSheer - Siêu mỏng, vớ gối, màu da, kín ngón
 url = https://shopykhoa.com/ultrasheer-sieu-mong-vo-goi-mau-da-kin-ngon-sp101.htm
 
 [tiki.vn]
-match = -253.8%%
-title = (Đẹp vô cùng) Áo gối ôm, vỏ gối ôm loại to mẫu Kẻ Đen ...
-url = https://tiki.vn/dep-vo-cung-ao-goi-om-vo-goi-om-loai-to-mau-ke-den-bao-goi-dai-poly-cotton-30x100cm-loai-dep-p176866955.html
+match = -169.2%%
+title = Mua VỎ GỐI XỊN HÀNG CAO CẤP (màu kẻ ngẫu nhiên)
+url = https://tiki.vn/vo-goi-xin-hang-cao-cap-mau-ke-ngau-nhien-p134296044.html?spid=134296046
 
 [gonbedding.vn]
 match = -15.4%%
@@ -82,9 +82,9 @@ title = Vietnamese-English dictionary - translation
 url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
-match = -115.4%%
-title = Áo gối nằm (đôi) mẫu đẹp- Được chọn mẫu
-url = https://shopee.vn/Áo-gối-nằm-(đôi)-mẫu-đẹp-Được-chọn-mẫu-i.18452594.20233541354
+match = -153.8%%
+title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
 
 [songhong.info]
 match = -161.5%%
@@ -92,9 +92,9 @@ title = Vỏ gối ôm Sông Hồng 38x100cm vải 100%% cotton
 url = https://songhong.info/vo-goi-om-song-hong-38x100-cotton
 
 [www.lazada.vn]
-match = -284.6%%
-title = Gối nằm, gối ngủ, gối kẻ, gối hơi gồm cả ruột gối và vỏ áo ...
-url = https://www.lazada.vn/products/goi-nam-goi-ngu-goi-ke-goi-hoi-gom-ca-ruot-goi-va-vo-ao-goi-loai-to-danh-cho-nguoi-lon-50-x70cm-cac-mau-ke-vai-cotton-han-quoc-i1568863340.html
+match = -53.8%%
+title = Vỏ Gối Kẻ Caro Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/vo-goi-ke-caro/
 
 [flexhouse.vn]
 match = -207.7%%
@@ -109,7 +109,7 @@ url = https://elambo.vn/vo-goi-35x50-cm/
 [jysk.vn]
 match = -238.5%%
 title = Vỏ Gối Nằm, Gối Ôm Bền Đẹp, Hiện Đại, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi?srsltid=AfmBOopLfg7xXkYM1pxli91JxgeIx1HNwrx43-vfZ4v4-hZv4hi0ROsp
+url = https://jysk.vn/vo-goi
 
 [www.everonvn.vn]
 match = 15.4%%
