--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-07 12:33:37
+lastsearch = 2024-08-07 16:29:16
 
 [demre.com.vn]
 match = 61.1%%
@@ -14,7 +14,7 @@ url = https://demre.com.vn/chieu-nhua-160x200
 [www.facebook.com]
 match = 42.1%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [kyoryo.vn]
 match = 12.0%%
@@ -27,19 +27,19 @@ title = Chiếu nhựa - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán M
 url = https://chieucoi.com.vn/danh-muc/chieu-nhua/
 
 [www.lazada.vn]
-match = 36.0%%
-title = Chiếu Nhựa Gấp đôi Giá Tốt T04/2024
-url = https://www.lazada.vn/tag/chieu-nhua-gap-doi/?page=2
+match = 32.0%%
+title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1,6m x2m)
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-16m-x2m-i1122594208.html
 
 [www.diepxuan.com]
-match = 52.0%%
-title = Điệp Xuân Chiếu nhựa Hà Nội 180x300
+match = 44.0%%
+title = Chiếu nhựa Hà Nội 180x300 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-180x300.html
 
 [demxanh.com]
-match = -12.0%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 16.0%%
+title = Chiếu Trúc Tăm Rồng kiểu 1 - Hà Nội
+url = https://demxanh.com/chieu-truc-tam-rong-kieu-1.html
 
 [shopee.vn]
 match = 36.0%%
