--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-07 13:49:45
+lastsearch = 2024-08-07 16:47:32
 
 [shopee.vn]
 match = 25.0%%
-title = Chiếu Lác Trắng Xếp Gọn
-url = https://shopee.vn/Chiếu-Lác-Trắng-Xếp-Gọn-i.58697470.8505363108
+title = Chiếu lác màu xuất khấu
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
 
 [chieulongdinh.com.vn]
 match = -162.5%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = 22.2%%
-title = Chieu Lac
-url = https://m.facebook.com/chieu.lac.73/
+match = -181.2%%
+title = Ghe vừa vô , chiếu nay gửi xe ah . Khách lên đơn mai ...
+url = https://m.facebook.com/groups/477065866263029/posts/1567983160504622/
 
 [baolongan.vn]
 match = -125.0%%
