--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-07 16:18:54
+lastsearch = 2024-08-07 16:46:49
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga gối Sông Hồng H16045 ga chun
 url = https://demsonghonghanoi.com/bo-chan-ga-goi-song-hong-h16045-ga-chun/
 
 [songhong.info]
-match = -28.6%%
-title = Bộ chăn ga gối cao cấp Urban mã UC22-020 -
-url = https://songhong.info/chan-ga-goi-uc020
+match = 9.5%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://songhong.info/chan-ga-goi-uc018
 
 [www.diepxuan.com]
 match = -9.5%%
