--- a/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-lua-co-goi-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-co-goi-14.html
 lastopen = 2024-06-09 22:25:57
 
 [search]
-lastsearch = 2024-08-07 10:41:13
+lastsearch = 2024-08-07 16:55:53
 
 [shopee.vn]
 match = 21.4%%
@@ -22,19 +22,19 @@ title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
 url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [demxanh.com]
-match = 25.0%%
-title = Chiếu điều hòa cao su non đa sắc tím than
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-tim-than.html
+match = 21.4%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [tiki.vn]
-match = 10.7%%
-title = Chiếu lụa điều hòa hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu lụa điều hòa
+match = 28.6%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [sieuthidem.vn]
 match = 32.1%%
 title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
-url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/?srsltid=AfmBOoqlq_Ci3NJrMCZ21R_XJLfyr3IphXYWllW8Mx0Id_URg_1Dzz4H
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
 [kyoryo.vn]
 match = -35.7%%
@@ -47,9 +47,9 @@ title = Chiếu điều hòa là gì? Có nên dùng chiếu điều hòa?
 url = https://happynest.vn/chuyen-nha/100072743/chieu-dieu-hoa-la-gi-co-nen-dung-chieu-dieu-hoa
 
 [khodem.vn]
-match = 14.3%%
-title = CHIẾU ĐIỀU HÒA TENCEL NHẬT BẢN CHÍNH HÃNG 100%%
-url = https://khodem.vn/chieu-dieu-hoa-tencel-nhat-ban-chinh-hang-100/
+match = -10.7%%
+title = CHIẾU ĐIỀU HÒA LOẠI NÀO TỐT? 3 LOẠI PHỔ BIẾN - Kho đệm
+url = https://khodem.vn/chieu-dieu-hoa-loai-nao-tot-3-loai-pho-bien/
 
 [foreverbedding.net]
 match = -3.6%%
