--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-08-07 14:31:54
+lastsearch = 2024-08-07 16:56:36
 
 [shopee.vn]
 match = -28.0%%
@@ -47,9 +47,9 @@ title = Các đối sách lớn của Đài Loan trong những năm tiếp theo
 url = https://nghiencuuchienluoc.org/cac-doi-sach-lon-cua-dai-loan-trong-nhung-nam-tiep-theo/
 
 [books.google.com]
-match = -100.0%%
-title = Minh Mệnh chính yếu - Volume 3 - Page 23 - Google Books Result
-url = https://books.google.com/books?id=MZIBAAAAMAAJ&pg=PA23&lpg=PA23&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=KDClK4mxRq&sig=ACfU3U07ujwH33NneqNZfOpurgThDBTUng&hl=en&sa=X&ved=2ahUKEwjAkIy8ruKHAxX4LkQIHXFJI0QQ6AF6BAgYEAM
+match = -80.0%%
+title = Địa chí Bắc Giang từ điển - Page 816 - Google Books Result
+url = https://books.google.com/books?id=EoNuAAAAMAAJ&pg=PA816&lpg=PA816&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=-WEAdV3DrU&sig=ACfU3U0a0GAAzRmsk08q3R-TJpq4nz0zKQ&hl=en&sa=X&ved=2ahUKEwiQqYbozuKHAxWOHjQIHVKlCCEQ6AF6BAgcEAM
 
 [cellphones.com.vn]
 match = -52.0%%
