--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-07 10:16:15
+lastsearch = 2024-08-07 16:54:52
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Một ngày ở làng dệt chiếu lác Long Cang, Cần Đước
 url = https://baolongan.vn/mot-ngay-o-lang-det-chieu-lac-long-cang-can-duoc-a5230.html
 
 [www.youtube.com]
-match = -106.2%%
-title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
-url = https://www.youtube.com/watch?v=D5B7MtNy_kM
+match = -175.0%%
+title = FULL MATCH: THỂ CÔNG-VIETTEL - CÔNG AN HÀ NỘI | V ...
+url = https://www.youtube.com/watch?v=Fqh5JHCjVzE
 
 [books.google.com]
 match = -218.8%%
@@ -202,9 +202,9 @@ title = TP. HCM: Các phái đoàn viếng tang Hòa thượng Thích ...
 url = https://phatsuonline.vn/tp-hcm-cac-phai-doan-vieng-tang-hoa-thuong-thich-hue-tri-sang-ngay-21-7-25
 
 [www.facebook.com]
-match = -162.5%%
-title = TÌM CHÓ MÈO LẠC ĐÀ NẴNG 🍀🕊️ | Chiều nay ngày 16/7 mình...
-url = https://www.facebook.com/groups/292989122642300/posts/chiều-nay-ngày-167-mình-có-bị-lạc-bé-phốc-sóc-như-hình-tại-đường-thanh-vinh-5-p-/880889220518951/
+match = -100.0%%
+title = Trường PTCS Nguyễn Đình Chiểu | Hanoi
+url = https://www.facebook.com/p/Trường-PTCS-Nguyễn-Đình-Chiểu-100083304616411/
 
 [www.yenbai.gov.vn]
 match = -193.8%%
