--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-07 13:24:25
+lastsearch = 2024-08-07 16:47:53
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Iron meteorite
 url = https://en.wikipedia.org/wiki/Iron_meteorite
 
 [www.facebook.com]
-match = -84.6%%
-title = 3:16 Healthcare | Bremen GA
-url = https://www.facebook.com/316Healthcare/
+match = -61.5%%
+title = Northwest Georgia Scanner
+url = https://www.facebook.com/NWGAScanner/
 
 [www.youtube.com]
 match = -338.5%%
@@ -253,8 +253,8 @@ url = https://www.denverpost.com/author/georgia-nicols/
 
 [www.prowireusa.com]
 match = -200.0%%
-title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
-url = https://www.prowireusa.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
+title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
+url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
 
 [www.icc-cpi.int]
 match = -92.3%%
@@ -347,8 +347,8 @@ title = Long-term strategies portal
 url = https://unfccc.int/process/the-paris-agreement/long-term-strategies
 
 [georgiadogs.com]
-match = -138.5%%
-title = Charlie Condon - 2024 Baseball Roster
+match = 23.1%%
+title = Charlie Condon
 url = https://georgiadogs.com/sports/baseball/roster/charlie-condon/7496
 
 [www.nature.com]
