--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -57,9 +57,9 @@ title = Điệp Xuân Nệm siêu nhẹ
 url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOooOedba_opMxU_4mnGqJ0G5s2Av891OOfHocPKVdOHoQ0-ohsu-
 
 [m.facebook.com]
-match = -133.3%%
-title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
+match = -94.4%%
+title = Người Việt Bolsa/Orange County | ❤️‍🔥❤️‍🔥NEM CHUA ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2893614240788940/
 
 [emartmall.com.vn]
 match = 0.0%%
