--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-07 16:22:24
+lastsearch = 2024-08-07 16:55:13
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -27,9 +27,9 @@ title = Nam Joo-hyuk
 url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
-match = -165.0%%
-title = Majors Kate and Denis Alfin help keep West Point - The U.S. ...
-url = https://www.facebook.com/photo.php?fbid=2787775811272385&id=130999010283425&set=a.598254856891169&locale=hu_HU
+match = -160.0%%
+title = CDT Jake Sorrels successfully defended his senior thesis “ ...
+url = https://www.facebook.com/photo.php?fbid=2759708960745737&id=130999010283425&set=a.135510956498897&locale=hu_HU
 
 [www.vietnam.vn]
 match = -155.0%%
@@ -267,9 +267,9 @@ title = 'I told him to shut up' - Ronaldo explains furious reaction ...
 url = https://www.goal.com/en/news/i-told-him-to-shut-up-ronaldo-explains-furious-reaction-substitution-portugal-world-cup-defeat-south-korea/bltf2de10573a9f05e8
 
 [en.yna.co.kr]
-match = -90.0%%
-title = NORTH KOREA NEWSLETTER NO. 244 (January 10, 2013)
-url = https://en.yna.co.kr/view/AEN20130109006800325
+match = -105.0%%
+title = (EDITORIAL from Korea JoongAng Daily on April 6) ...
+url = https://en.yna.co.kr/view/AEN20180406000600320
 
 [www.vlr.gg]
 match = -145.0%%
@@ -437,7 +437,7 @@ title = Stocks Slump on US Economic Growth Risks
 url = https://www.nasdaq.com/articles/stocks-slump-us-economic-growth-risks
 
 [www.republic-online.com]
-match = -130.0%%
-title = Danish PM attack suspect says doesn't recall hitting her
-url = https://www.republic-online.com/news/national_news/danish-pm-attack-suspect-says-doesnt-recall-hitting-her/article_1e2619da-d8ba-5114-93fd-6d037f5eb7d2.html
+match = -105.0%%
+title = Music and gaming help Sony hike net profit forecast
+url = https://www.republic-online.com/news/national_news/music-and-gaming-help-sony-hike-net-profit-forecast/article_83641116-0588-5481-968b-19f277ec5c54.html
 
