--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-07 16:19:36
+lastsearch = 2024-08-07 17:20:11
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -22,9 +22,9 @@ title = Lịch phát sóng - Đài Truyền hình TP. ...
 url = https://www.htv.com.vn/lich-phat-song
 
 [www.thietbidiendgp.vn]
-match = -106.7%%
-title = Đèn Led mắt ếch HT 8091 14W HT MAX LIGHT
-url = https://www.thietbidiendgp.vn/products/me91-14-t-v-tt-ht-light-level
+match = -146.7%%
+title = Đèn Led mắt ếch 8091 viền đen 14W HT MAX LIGHT
+url = https://www.thietbidiendgp.vn/products/mevd912-14-t-v-tt-ht-light-level
 
 [www.facebook.com]
 match = -186.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 7W HT Light Level
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -240.0%%
-title = Mộng Cam tham gia sân chơi biến hình cùng ca khúc "Rực rỡ ...
-url = https://www.youtube.com/watch?v=JtBQKTDx7sU
+match = -226.7%%
+title = 60 Giây Sáng - Ngày 04/08/2024 - HTV Tin Tức Mới Nhất 2024
+url = https://www.youtube.com/watch?v=eo5wSRr0iFU
 
 [dauthau.asia]
 match = -240.0%%
