--- a/images/nem-foam-dreamland-uc-180x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-180x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-180x200x20.html
 lastopen = 2024-06-07 00:24:18
 
 [search]
-lastsearch = 2024-08-07 16:27:31
+lastsearch = 2024-08-07 17:22:17
 
 [www.diepxuan.com]
 match = 40.6%%
@@ -12,9 +12,9 @@ title = Nệm Dreamland Úc 180x200x09 - Điệp Xuân
 url = https://www.diepxuan.com/nem-dreamland-uc-180x200x09.html
 
 [demxanh.com]
-match = -40.6%%
-title = Đệm cao su Dunlopillo Latex World Pure giá rẻ nhất Hà Nội
-url = https://demxanh.com/dem-cao-su-dunlopillo-latex-world-pure.html
+match = 25.0%%
+title = Đệm bông ép Dreamland 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-dreamland-1m8-gia-bao-nhieu.html
 
 [changagoidemdep.vn]
 match = -12.5%%
