--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-08-07 13:23:01
+lastsearch = 2024-08-07 17:17:22
 
 [shopee.vn]
 match = -216.7%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -116.7%%
-title = Nệm lot ghế, thảm trải ghế 1m6 x53cm
-url = https://www.lazada.vn/products/nem-lot-ghe-tham-trai-ghe-1m6-x53cm-i2418423966.html
+match = -258.3%%
+title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
+url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html?srsltid=AfmBOopjiKh7XAYoVASe926fKkCNX5efdLGA8egUxS1Q3Dy9secWKvSA
 
 [vn.my-best.com]
 match = -233.3%%
@@ -134,7 +134,7 @@ url = https://anmoc.vn/blogs/news/nem-lot-ghe-go
 [dienmaycholon.com]
 match = -200.0%%
 title = Máy Giặt Sofa, Nệm, Thảm Cầm Tay Uwant B100
-url = https://dienmaycholon.com/may-hut-bui-robot-hut-bui/may-giat-sofa-nem-tham-cam-tay-uwant-b100
+url = https://dienmaycholon.com/may-hut-bui-robot-hut-bui/may-giat-sofa-nem-tham-cam-tay-uwant-b100?srsltid=AfmBOoq27LTQ5OjbTFzaKySrXTsY-xnqzBxb1OdMArgbKRVdJ7YCwULk
 
 [thenewgastronome.com]
 match = -41.7%%
