CI images update

--- a/images/chieu-lac-90x100/config.ini
+++ b/images/chieu-lac-90x100/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-90x100.html
 lastopen = 2024-06-20 22:28:06
 
 [search]
-lastsearch = 2024-08-07 17:13:09
+lastsearch = 2024-08-07 17:39:34
 
 [anlacphat.com]
 match = -118.8%%
@@ -49,7 +49,7 @@ url = https://qtetech.com/hop-chong-tinh-dien
 [www.lazada.vn]
 match = -137.5%%
 title = Chiếu Lác May Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-lac-may/?srsltid=AfmBOopgGyUbtk4AAZuPL0MphBri_CcsqA9wxKKUVt0l_uQyHut9VZ20
+url = https://www.lazada.vn/tag/chieu-lac-may/
 
 [vi.made-in-china.com]
 match = -100.0%%
@@ -59,7 +59,7 @@ url = https://vi.made-in-china.com/co_ti-care/product_Medical-100-Cotton-Pillow-
 [www.diepxuan.com]
 match = -68.8%%
 title = Chiếu gấp Thái Bình 180x300 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html?srsltid=AfmBOoq3MGS1VUEQ6fVyIPFB7eGI4tU16FgV-vTTi_AeaD169w1hpDpp
+url = https://www.diepxuan.com/chieu-gap-thai-binh-180x300.html
 
 [www.thietbihiepphat.com]
 match = -43.8%%
