--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-08-07 15:57:31
+lastsearch = 2024-08-07 17:35:01
 
 [www.zillow.com]
 match = -115.4%%
@@ -660,4 +660,9 @@ url = https://www.gntc.edu/
 match = -53.8%%
 title = NICS Guide for Appealing
 url = https://ucr.fbi.gov/nics/appeals/nics-guide-for-appealing
+
+[www.sciencedirect.com]
+match = -300.0%%
+title = Highly mobile twin boundaries in seven-layer modulated Ni ...
+url = https://www.sciencedirect.com/science/article/pii/S1359646219306359
 
