--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-08-07 17:15:15
+lastsearch = 2024-08-07 17:40:16
 
 [m.youtube.com]
 match = -144.4%%
@@ -22,9 +22,9 @@ title = fuong's food | CUỐN NỘM CỰC CUỐN MIỆNG!!😝😝 —— ...
 url = https://www.instagram.com/p/COmtAgeH-He/
 
 [www.facebook.com]
-match = -172.2%%
-title = NEM new collection | Spring – Summer Collection – Coming ...
-url = https://www.facebook.com/nemfashion.official/videos/nem-new-collection/1039833922821175/
+match = 22.2%%
+title = NEM Fashion - 𝐀́𝐎 𝐏𝐇𝐀𝐎
+url = https://www.facebook.com/story.php/?story_fbid=745952497567450&id=100064581196454
 
 [www.tiktok.com]
 match = -77.8%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -177.8%%
-title = Thấy thương chị gái bán nem nướng thật thà hỏi gì cũng khai
-url = https://m.facebook.com/amthucduongpho247/videos/thấy-thương-chị-gái-bán-nem-nướng-thật-thà-hỏi-gì-cũng-khai-atdp/629711951714693/
+match = -122.2%%
+title = Người Việt Bolsa/Orange County | 🌮NEM CHUA THANH ...
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2900660673417630/
 
 [www.proz.com]
 match = -183.3%%
