--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-08-07 17:17:43
+lastsearch = 2024-08-07 17:38:32
 
 [zhangbrickshop.com]
 match = -133.3
@@ -57,9 +57,9 @@ title = Xác định hàm lượng vitamin D2 từ một số loài nấm lớn 
 url = https://vjol.info.vn/index.php/vinhuni/article/download/51293/42137/
 
 [m.facebook.com]
-match = -153.3%%
-title = Na để thông tin kem chống nắng phù hợp với...
-url = https://m.facebook.com/story.php/?story_fbid=1051818282979433&id=100044538125216
+match = -200.0%%
+title = KTX ĐHQG TP.HCM | ship liên tục Toà B từ 4:30 ,(khu ...
+url = https://m.facebook.com/groups/hoiktxkhub/posts/2411658492547949/
 
 [dkv.biz.vn]
 match = -166.7%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = 20.0%%
-title = Rạp Chiếu Phim Cũ
-url = https://www.facebook.com/phimhaygiare/
+match = -226.7%%
+title = Moss - Thấy vậy chứ nói quậy là hem chịu nha, mấy bà qua...
+url = https://www.facebook.com/story.php/?story_fbid=901938211972572&id=100064692038657
 
 [hoc247.vn]
 match = -213.3%%
@@ -182,9 +182,9 @@ title = 2'-deoxyuridine D2
 url = https://www.aptochem.com/p-101-2-deoxyuridine-d2.aspx
 
 [shopee.vn]
-match = -186.7%%
-title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
-url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
+match = -80.0%%
+title = Áo Khoác Nam D2 Chất Nhung Hót Hít
+url = https://shopee.vn/Áo-Khoác-Nam-D2-Chất-Nhung-Hót-Hít-Áo-Khoác-Nam-D2-Thêu-Chữ-Phối-Màu-Siêu-Đẹp-i.136512286.24903680860
 
 [uspharma.vn]
 match = -20.0%%
