--- a/images/chieu-truc-cong-ty-12-19/config.ini
+++ b/images/chieu-truc-cong-ty-12-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-12-19.html
 lastopen = 2024-06-09 23:41:54
 
 [search]
-lastsearch = 2024-08-07 12:21:50
+lastsearch = 2024-08-07 17:41:18
 
 [chieutrucsaigon.com]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
 url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
 
 [www.youtube.com]
-match = -66.7%%
-title = 🔴 Trực tiếp: TRUNG QUỐC - VIỆT NAM | Giải bóng đá U19 ...
-url = https://www.youtube.com/watch?v=3U6gbHFBMhs
+match = -75.0%%
+title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp CHIẾU SIÊU ...
+url = https://www.youtube.com/watch?v=FFV6Oqxq3Ds
 
 [chieutrucxinh.weebly.com]
 match = -70.8%%
@@ -225,4 +225,9 @@ url = https://www.mpi.gov.vn/
 match = -5.0%%
 title = Techcombank Việt Nam
 url = https://m.facebook.com/story.php/?story_fbid=916908393815661&id=100064895251803
+
+[baodautu.vn]
+match = -79.2%%
+title = TOP 10 thương vụ M&A nổi bật giữa các doanh nghiệp ...
+url = https://baodautu.vn/top-10-thuong-vu-ma-noi-bat-giua-cac-doanh-nghiep-viet-nam-giai-doan-2009-2023-d204081.html
 
