--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-07 12:43:26
+lastsearch = 2024-08-07 17:44:11
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [everonkorea.com]
 match = 23.4%%
@@ -32,14 +32,14 @@ title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
 url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [www.diepxuan.com]
-match = 48.9%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27 - Điệp Xuân
+match = 36.2%%
+title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
 match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
+title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everonvn.com.vn]
 match = 19.1%%
@@ -52,9 +52,9 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [everonhanquoc.vn]
-match = 19.1%%
-title = Đệm Lò Xo Kingkoil Cloud Pillow Top - Sự Nâng Đỡ Tối Đa
-url = https://everonhanquoc.vn/everon/12714/dem-lo-xo-everon-kingkoil-cloud-pillow-top
+match = -48.0%%
+title = Các Loại Đệm Lò Xo Everon
+url = https://everonhanquoc.vn/1030/dem-lo-xo-everon
 
 [everonvietnam.com]
 match = -6.4%%
