--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-07 13:51:24
+lastsearch = 2024-08-07 17:38:11
 
 [shopee.vn]
-match = -8.3%%
-title = Thảm lau chân LEN MỊN thấm hút tốt size 40x60 cm
-url = https://shopee.vn/Thảm-lau-chân-LEN-MỊN-thấm-hút-tốt-size-40x60-cm-i.978766629.25771125475
+match = 4.2%%
+title = THẢM LAU CHÂN LÔNG LOANG- LOẠI 1 [40 x 60CM]
+url = https://shopee.vn/THẢM-LAU-CHÂN-LÔNG-LOANG-LOẠI-1-40-x-60CM--i.153182534.15718665953?xptdk=c2451bc6-08f3-4d84-808f-da650d538540
 
 [lepetit.com.vn]
 match = -66.7%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -83.3%%
-title = Thảm lau chùi chân chống trơn trượt sợi len siêu mịn kích ...
-url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html
+match = 37.5%%
+title = Thảm Lau Chân Chống Trơn 40x60 cm
+url = https://www.lazada.vn/products/tham-chan-logo-hinh-ban-chan-shunc-tham-lau-chan-chong-tron-40x60-cm-i2374660975.html
 
 [megahomevietnam.com]
 match = 20.0%%
