--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-07 16:46:07
+lastsearch = 2024-08-07 17:46:56
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=tham chui chan 60x80
 
 [shopee.vn]
-match = -58.3%%
-title = Thảm nhựa rối lau chân Welcome - LOẠI 1 KT 1.2X1.5, ...
-url = https://shopee.vn/Thảm-nhựa-rối-lau-chân-Welcome-LOẠI-1-KT-1.2X1.5-1.2X1.8-i.33873765.3832805419
+match = -41.7%%
+title = Thảm chùi chân chữ HOME cỡ 50x80, thấm hút phong ...
+url = https://shopee.vn/Thảm-chùi-chân-chữ-HOME-cỡ-50x80-thấm-hút-phong-cách-Nhật-Bản-i.66569981.10269870886
 
 [lepetit.com.vn]
 match = -79.2%%
@@ -150,4 +150,9 @@ url = https://sieuthicholon.com/tham-chui-chan-3991/?cong-ty=299824767
 match = -87.5%%
 title = Thảm chùi chân nỉ cỡ lớn kt 1,2m 1,8m, thảm chùi chân sợi ...
 url = https://mho.vn/tham-chui-chan-ni-co-lon-kt-1-2m-1-8m-tham-chui-chan-soi-len-de-cao-su-sh2732231597.html
+
+[www.leicabiosystems.com]
+match = -50.0%%
+title = Leica CM1950
+url = https://www.leicabiosystems.com/sites/default/files/media_product-download/2024-08/Leica_CM1950_IFU_3v0ZA_vi.pdf
 
