--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-08-07 15:55:26
+lastsearch = 2024-08-07 17:35:42
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOopRG_9dM_C4reVktF8S-uD9hhPE4QdiPo2W8PrHB_sFN-5Y4f_r
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.noithatpassion.com]
 match = -52.2%%
