CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -94,7 +94,7 @@ url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-t
 [www.diepxuan.com]
 match = 33.3%%
 title = Điệp Xuân Chiếu lác D2 10
-url = https://www.diepxuan.com/chieu-lac-d2-10.html
+url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOopg2E1mL-o9-AbG7bT6geIsT9U7Sqb3g1lD1NJDjxZa0OjNTNLv
 
 [visana.vn]
 match = -240.0%%
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOoqDSRiemTGGX-LJu1f7IUQKl77XCD1orPoO_yYkKB1C5kqyHzyh
 
 [www.nhathuocankhang.com]
 match = -220.0%%
