--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-07 16:16:50
+lastsearch = 2024-08-07 17:45:21
 
 [everon.online]
-match = 50.0%%
-title = Bộ Ga Chun Chần Everon Bốn Mùa ...
-url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
+match = -44.4%%
+title = Bộ Everon EPM24061
+url = https://everon.online/products/bo-everon-epm24061
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [nem.vn]
 match = 5.9%%
