--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-07 13:39:01
+lastsearch = 2024-08-07 17:53:44
 
 [tiki.vn]
 match = -133.3%%
@@ -17,9 +17,9 @@ title = Chăn cừu pháp Joliefam - Tổng hợp các mẫu màu đẹp
 url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
 
 [www.lazada.vn]
-match = -166.7%%
-title = Chan Long Cuu 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chan-long-cuu-2m/
+match = -66.7%%
+title = Chăn Lông Cừu 2mx2m2 Giá Tốt T05/2024
+url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/
 
 [tokyolife.vn]
 match = -193.3%%
