--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-07 15:59:58
+lastsearch = 2024-08-07 17:46:04
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
-match = 0.0%%
-title = Chiếu đèn vàng da 15 phút có hiệu quả không?
-url = https://www.vinmec.com/vie/bai-viet/chieu-den-vang-da-15-phut-co-hieu-qua-khong-vi
+match = -21.4%%
+title = Làm thế nào khi trẻ sơ sinh bị vàng da kéo dài?
+url = https://www.vinmec.com/vie/bai-viet/lam-nao-khi-tre-so-sinh-bi-vang-da-keo-dai-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -27,9 +27,9 @@ title = Đổi Màu Nội Thất Mercedes GLC Đỏ Đen Da Bò Xịn Italy Hà 
 url = https://www.youtube.com/watch?v=6okPdN0a338
 
 [m.facebook.com]
-match = -25.0%%
-title = Tuyển Dụng Spa HCM | *** CẦN TUYỂN GẤP 05 KỸ ...
-url = https://m.facebook.com/groups/313116276409731/posts/1020387965682555/
+match = -7.1%%
+title = LÀNG ĂN THÔ - Fruitarian ( Raw Vegan )
+url = https://m.facebook.com/groups/langantho/posts/1353899318666407/
 
 [www.dkn.tv]
 match = -21.4%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -53.6%%
-title = Bệnh sán dải heo (Taenia solium và taenia asiatica hay ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-dai-heo-taenia-solium-va-taenia-asiatica-hay-taenia-solium-va-pork-tapeworm.html
+match = -71.4%%
+title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
@@ -87,9 +87,9 @@ title = Sáng 17/9, đã 15 ngày không ghi nhận ca mắc mới COVID ...
 url = http://soyte.hatinh.gov.vn/tin-tuc-su-kien/sang-17-9-da-15-ngay-khong-ghi-nhan-ca-mac-moi-covid-19-o-co.html
 
 [med.loship.vn]
-match = -53.6%%
-title = Nhà Thuốc Hiệu Thuốc Thiên Phúc 2 - Giao nhanh trong 1 giờ
-url = https://med.loship.vn/nhathuochieuthuocthienphuc2
+match = -57.1%%
+title = Vistar Pharmacy - Phạm Văn Chiêu - Giao nhanh trong 1 giờ
+url = https://med.loship.vn/vistarpharmacyphamvanchieu
 
 [medlatec.vn]
 match = -25.0%%
@@ -103,8 +103,8 @@ url = https://www.merckmillipore.com/Web-CN-Site/en_US/-/CNY/ShowDocument-File?P
 
 [www.facebook.com]
 match = -35.7%%
-title = Nội thất nhựa đài loan thành phong | Ho Chi Minh City
-url = https://www.facebook.com/p/Nội-thất-nhựa-đài-loan-thành-phong-100063972462124/?locale=gn_PY
+title = Chào buổi chiều gia... - Mỹ phẩm. thực phẩm hàn quốc
+url = https://www.facebook.com/permalink.php/?story_fbid=618643243632299&id=100064598872681&locale=nb_NO
 
 [www.favri.org.vn]
 match = -10.7%%
