--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-08-07 11:37:57
+lastsearch = 2024-08-07 17:47:06
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -107,9 +107,9 @@ title = SÁCH HƯỚNG DẪN HỌC VIÊN
 url = https://stableprogram.org/pdf/vietnamese/STABLE Vietnamese Learner Manual - 6 ed..pdf
 
 [drhc-cosmetics.com]
-match = -60.7%%
-title = DR.HC All-Natural Skincare Face Soap - Goat Milk Orange ...
-url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18
+match = -71.4%%
+title = Goat Milk Orange (110g, 3.8oz.) (Skin brightening, Anti- ...
+url = https://drhc-cosmetics.com/products/drc-lab-organic-natural-vegan-cosmetics-skincare-face-wash-soap-bar-xa-phong-rua-mat-duong-da-18?srsltid=AfmBOop9hEx7kYQabfd8ymvJ-DPbLLfqPwkx_ANeSznzcKkDPTeb_BQR
 
 [quangduc.com]
 match = -42.9%%
