--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-08-07 15:54:03
+lastsearch = 2024-08-07 17:49:13
 
 [demxanh.com]
-match = -3.3%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 6.7%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
-match = 10.0%%
-title = CHIẾU ĐIỀU HÒA SỢI MẤY LÓT LỤA CAO CẤP HÀNG ...
-url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-SỢI-MẤY-LÓT-LỤA-CAO-CẤP-HÀNG-LOẠI-1-i.914808892.24557268713
+match = -10.0%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [demviethome.vn]
 match = 26.7%%
