--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-08-07 16:54:52
+lastsearch = 2024-08-07 17:51:40
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -74,7 +74,7 @@ url = https://www.youtube.com/watch?v=Fqh5JHCjVzE
 [books.google.com]
 match = -218.8%%
 title = Gazetteer to AMS 1:250,000 Maps of Indochina (series L509).
-url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+16&source=bl&ots=LZu7XXaFSl&sig=ACfU3U17kekXzpCv7n_18xDgQqsYlww3QA&hl=en&sa=X&ved=2ahUKEwjn0oCTytuHAxXYNlkFHRMmMtgQ6AF6BAgZEAM
+url = https://books.google.com/books?id=3gZclKX0dQYC&pg=PA272&lpg=PA272&dq=chieu+lac+soc+16&source=bl&ots=LZu8QRfGQf&sig=ACfU3U3QdN01b6tnRrzXn4khhiJkjRBv0g&hl=en&sa=X&ved=2ahUKEwj378yP2-KHAxUYEjQIHbT9AJEQ6AF6BAgcEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
