--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-07 15:44:46
+lastsearch = 2024-08-07 17:51:21
 
 [us.misumi-ec.com]
 match = -325.0%%
@@ -292,9 +292,9 @@ title = Con Ga Trong Restaurant Photos
 url = https://www.yelp.com/biz/con-ga-trong-restaurant-san-jose-2
 
 [www.fwe.com]
-match = 9.1%%
-title = Get A Quote
-url = https://www.fwe.com/sales-and-support/get-quote
+match = -58.3%%
+title = Warranty Registration
+url = https://www.fwe.com/sales-and-support/warranty
 
 [www.ktalnews.com]
 match = -325.0%%
