--- a/images/nem-everon-150x190x9/config.ini
+++ b/images/nem-everon-150x190x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-150x190x9.html
 lastopen = 2024-06-06 17:10:22
 
 [search]
-lastsearch = 2024-08-07 14:31:32
+lastsearch = 2024-08-07 17:53:22
 
 [everonvn.com.vn]
 match = 15.0%%
@@ -12,9 +12,9 @@ title = Bảng Giá Đệm Everon Năm 2024
 url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [akasi.com.vn]
-match = 10.0%%
-title = ĐỆM BÔNG ÉP EVERON - Akasi
-url = https://akasi.com.vn/san-pham/dem-bong-ep-everon/
+match = -45.0%%
+title = Đệm bông ép Hàn Quốc - KORE - Akasi
+url = https://akasi.com.vn/san-pham/dem-bong-ep-han-quoc-kore/
 
 [everon365.vn]
 match = 16.7%%
@@ -49,7 +49,7 @@ url = https://thegioidemviet.vn/nem-cao-su-bong-kim-cuong/
 [demxanh.com]
 match = -140.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOop0i2wN0_tvwYIEk7bh5ksoGvf9TI8xbpkLOPmIxSjsuqMbLOhw
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [thegioidemonline.com]
 match = -40.0%%
