--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-07 12:15:58
+lastsearch = 2024-08-07 17:54:46
 
 [www.linkedin.com]
-match = -145.5%%
-title = Tam Tram - Kansas Army National Guard
-url = https://www.linkedin.com/in/tam-tram-a3286573
+match = -172.7%%
+title = Tam Tran - Wichita, Kansas, United States
+url = https://www.linkedin.com/in/tam-tran-0a0005213
 
 [sos.ks.gov]
 match = -9.1%%
@@ -367,9 +367,9 @@ title = Trung tâm khám phá khoa học Quy Nhơn
 url = https://quynhonhotel.com/trung-tam-kham-pha-khoa-hoc-quy-nhon/
 
 [en.nhipcautamgiao.net]
-match = -309.1%%
-title = Cao Dai Class Taught at Kansas State University – USA
-url = http://en.nhipcautamgiao.net/caodaism/news-caodaism/cao-dai-class-taught-at--kansas-state-university---usa/
+match = -381.8%%
+title = Kansas State University and Oomoto Religion attended the ...
+url = http://en.nhipcautamgiao.net/caodaism/news-caodaism/kansas-state-university-and-oomoto-religion-attended-the-great-festival-commemorating-god---year-2023/
 
 [www.nguoi-viet.com]
 match = -9.1%%
