CI images update

--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-08-07 16:25:07
+lastsearch = 2024-08-07 18:15:10
 
 [en.wikipedia.org]
 match = -16.7%%
@@ -32,9 +32,9 @@ title = Discovery of a novel third-generation EGFR inhibitor and ...
 url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7218543/
 
 [books.google.com]
-match = -223.5%%
-title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=chan+5+kg+kq+song&source=bl&ots=zGiWQHnJXF&sig=ACfU3U3R3mRhMbLj8oPwylbZgyX1I_Hhrg&hl=en&sa=X&ved=2ahUKEwiLzJzjx-KHAxW7MVkFHRGWNdUQ6AF6BAgcEAM
+match = -11.8%%
+title = Cumulated Index Medicus
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWXDJ3p_9&sig=ACfU3U1cfXnDG0OGdpptktG87RoCbWvQjg&hl=en&sa=X&ved=2ahUKEwieqN6v4OKHAxVZEjQIHUS-NP8Q6AF6BAgZEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
