--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-07 14:27:37
+lastsearch = 2024-08-07 18:18:02
 
 [demxanh.com]
 match = 34.5%%
@@ -60,4 +60,9 @@ url = https://shopee.vn/Chiếu-điều-hoà-cao-su-non-in-hình-5D-siêu-mát-t
 match = 72.4%%
 title = Chiếu Điều Hòa Cao Su Non - 001
 url = https://suongtuyet.com/chieu-dieu-hoa-cao-su-non-001
+
+[olbedding.com]
+match = -13.8%%
+title = Chiếu điều hòa cao su non loại tốt - Mẫu 6 - Nệm Uy Tín
+url = https://olbedding.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-6/
 
