--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-07 14:16:36
+lastsearch = 2024-08-07 18:20:26
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -187.5%%
-title = 21-08-2023 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
-url = https://www.facebook.com/soctrangtv/videos/21-08-2023-thời-sự-chiều-18h30/1110320116612660/
+match = -131.2%%
+title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
+url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -628,8 +628,8 @@ url = https://thanhhoa.gov.vn/
 
 [congan.hanam.gov.vn]
 match = -200.0%%
-title = Lực lượng ANTT ở cơ sở xã Vũ Bản, huyện Bình Lục (Hà ...
-url = https://congan.hanam.gov.vn/index.php/vi/news/tin-hoat-dong/luc-luong-antt-o-co-so-xa-vu-ban-huyen-binh-luc-ha-nam-giup-chau-be-di-lac-tro-ve-gia-dinh-2622.html
+title = Cảnh sát giao thông Hà Nam giúp đỡ trẻ bị lạc về gia đình!
+url = https://congan.hanam.gov.vn/index.php/vi/news/nguoi-tot-viec-tot/canh-sat-giao-thong-ha-nam-giup-do-tre-bi-lac-ve-gia-dinh-2803.html
 
 [lacduong.lamdong.gov.vn]
 match = 33.3%%
