--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-08-07 16:33:38
+lastsearch = 2024-08-07 18:26:46
 
 [everon.online]
 match = -55.6%%
@@ -17,9 +17,9 @@ title = Bộ Chăn Ga Everon Est-21039 màu xanh chất liệu gỗ tổng ...
 url = https://everonvn.com.vn/everon/2114/bo-everon-est-21039
 
 [tongdailyeveron.com.vn]
-match = 29.6%%
-title = Bộ ga phủ 180*200 EPM 20069
-url = https://tongdailyeveron.com.vn/products/bo-ga-phu-180-200-epm20069
+match = -5.3%%
+title = Bộ Chăn Ga Giảm Giá
+url = https://tongdailyeveron.com.vn/collections/bo-chan-ga-giam-gia
 
 [demxanh.com]
 match = -7.4%%
@@ -32,14 +32,14 @@ title = Bộ chăn ga gối Everon EPM-21070
 url = https://everonhanquoc.vn/everon/12768/bo-chan-ga-goi-everon-epm-21070
 
 [everonhn.com.vn]
-match = -18.5%%
-title = Bộ chăn ga Artemis ASM 20101 - Everon Hà Nội
-url = https://everonhn.com.vn/bo-chan-ga-artemis-asm-20101
+match = 33.3%%
+title = Bộ chăn ga Everon ESB -22020
+url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
 
 [everon.net.vn]
-match = 10.5%%
-title = Bộ Everon Epm-21071
-url = https://everon.net.vn/everon/2130/bo-everon-epm-21071
+match = 0.0%%
+title = Bộ Everon Ept-21045
+url = https://everon.net.vn/everon/2125/bo-everon-ept-21045
 
 [sieuthidemhanquoc.com.vn]
 match = 22.2%%
