--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-08-07 16:16:08
+lastsearch = 2024-08-07 18:11:57
 
 [www.diepxuan.com]
 match = 48.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 [www.facebook.com]
 match = 20.0%%
 title = Chiếu Trúc Tre Việt Nam | Hanoi
-url = https://www.facebook.com/chieutructrevietnam/?locale=vi_VN
+url = https://www.facebook.com/chieutructrevietnam/?locale=el_GR
 
 [demxanh.com]
-match = -20.0%%
-title = Bảng giá chiếu trúc Hương Trúc mới nhất 2024
-url = https://demxanh.com/bang-gia-chieu-truc-huong-truc-moi-nhat-2019.html
+match = -52.0%%
+title = Đệm cao su Vạn Thành Standard giá rẻ nhất Hà Nội
+url = https://demxanh.com/dem-cao-su-van-thanh-standard.html
 
 [chieucoi.com.vn]
 match = -60.0%%
