--- a/images/chieu-truc-den-khong-vien-lson-15/config.ini
+++ b/images/chieu-truc-den-khong-vien-lson-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-khong-vien-lson-15.html
 lastopen = 2024-06-07 00:20:03
 
 [search]
-lastsearch = 2024-08-07 14:46:13
+lastsearch = 2024-08-07 18:21:08
 
 [demxanh.com]
-match = -9.1%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 42.4%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -64,7 +64,7 @@ url = https://chieutrelanlan.com/chia-se-nhung-dia-chi-mua-chieu-truc-tam-uy-tin
 [vongxepsaigon.vn]
 match = -30.3%%
 title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-160cm/
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
 
 [caicachhanhchinhhungyen.com.vn]
 match = 0.0%%
@@ -162,9 +162,9 @@ title = Chiếu trúc đen không viền hàng việt nam cao cấp 1m2x2m ...
 url = https://www.sendo.vn/chieu-truc-den-khong-vien-hang-viet-nam-cao-cap-1m2x2m-duo-c-kie-m-ha-ng-31921335-117423477.html
 
 [thegioichieutruc.com]
-match = 0.0%%
-title = Địa chỉ bán chiếu trúc tại TP. Hồ Chí Minh (Sài Gòn)
-url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-tai-tp-ho-chi-minh-sai-gon/
+match = 6.1%%
+title = Địa chỉ bán chiếu trúc hạt đen tại 63 tỉnh thành
+url = https://thegioichieutruc.com/dia-chi-ban-chieu-truc-hat-den-tai-63-tinh-thanh/
 
 [dms.gov.vn]
 match = -48.5%%
