--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-07 12:12:50
+lastsearch = 2024-08-07 18:18:23
 
 [phana.com.vn]
-match = 63.6%%
-title = Giường bệnh
-url = https://phana.com.vn/giuong-benh
+match = -90.9%%
+title = MN-G1-Giường 1 tay quay có bô
+url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
 
 [tiki.vn]
 match = -190.9%%
@@ -17,9 +17,9 @@ title = Giường 1,8mx2m hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=giường 1,8mx2m
 
 [www.facebook.com]
-match = -290.9%%
-title = Khung giường bằng kim loại gần Minneapolis, Minnesota
-url = https://www.facebook.com/marketplace/minneapolis/metal-bed-frames/?locale=vi_VN
+match = -281.8%%
+title = Có bán Đệm giường đôi lớn tại Minneapolis, Minnesota
+url = https://www.facebook.com/marketplace/minneapolis/queen-mattresses/?locale=vi_VN
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -107,9 +107,9 @@ title = Giường MN 5
 url = http://thietbimamnontienloc.com/san-pham/giuong-mn-5-253.html
 
 [www.airbnb.com.vn]
-match = -309.1%%
-title = Phòng 1 Giường cỡ King 2 Phòng tại Bloomington - Airbnb
-url = https://www.airbnb.com.vn/rooms/929459059736966278
+match = -400.0%%
+title = Phòng tiêu chuẩn 1 giường đôi tại Millennium Minneapolis - Airbnb
+url = https://www.airbnb.com.vn/hotels/1059440610457947224
 
 [freemeteo.cl]
 match = -281.8%%
@@ -117,9 +117,9 @@ title = Weather Xom Giuong (1) - Long term weather forecast
 url = https://freemeteo.cl/mobile/weather/xom-giuong-1/longterm/weekly/?gid=1561485&mn=2&wk=1&language=english&country=vietnam
 
 [www.booking.com]
-match = -290.9%%
-title = Country Inn & Suites by Radisson, Albertville, MN
-url = https://www.booking.com/hotel/us/country-inn-suites-albertville.vi.html
+match = -336.4%%
+title = Hampton Inn and Suites Minneapolis University Area, MN
+url = https://www.booking.com/hotel/us/hampton-inn-and-suites-minneapolis-university-area-mn.vi.html
 
 [www.agoda.com]
 match = -354.5%%
@@ -185,4 +185,9 @@ url = https://www.ghostbed.com/
 match = -281.8%%
 title = Nhà nghỉ phục vụ giường và bữa sáng tại Minneapolis
 url = https://www.tripadvisor.com.vn/Hotels-g43323-c2-Minneapolis_Minnesota-Hotels.html
+
+[kidssun.vn]
+match = -236.4%%
+title = Giường Cũi Gỗ Quế 3 in 1 KT 70x110x86cm KIDSSUN
+url = https://kidssun.vn/products/giuong-cui-go-que-3-in-1-mau-trang-kt-70x110x86cm-kidssun
 
