--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-07 12:40:18
+lastsearch = 2024-08-07 18:12:42
 
 [dongagroup.vn]
 match = -272.7%%
@@ -12,9 +12,9 @@ title = Hơn 26 mẫu giường ngủ 2m giá rẻ | giao hàng tận nhà
 url = https://dongagroup.vn/noi-that-phong-ngu/giuong-ngu/2m-162.html
 
 [phana.com.vn]
-match = -63.6%%
-title = Giường y tế 2 tay quay ZK26
-url = https://phana.com.vn/giuong-y-te-2-tay-quay-zk26-1
+match = -109.1%%
+title = Giường - tủ - băng ca - bàn khám
+url = https://phana.com.vn/giuong-noi-that-benh-vien
 
 [noithatduongdong.com]
 match = 45.5%%
@@ -22,14 +22,14 @@ title = Giường tầng sắt
 url = https://noithatduongdong.com/giuong-tang-sat
 
 [giuonggaphoaphat.com]
-match = -27.3%%
-title = Giuonggaphoaphat.com
-url = http://giuonggaphoaphat.com/
+match = -81.8%%
+title = GIƯỜNG GẤP NHẬP KHẨU NHẬT BẢN
+url = http://giuonggaphoaphat.com/giuong-nhap-khau-nhat-ban
 
 [tunhuamiennam.com]
-match = -172.7%%
-title = giường nhựa cứng ecoplast cao cấp gec60
-url = https://tunhuamiennam.com/san-pham/giuong-nhua-cung-ecoplast-cao-cap-gec60-2/
+match = -245.5%%
+title = giường liền tủ nhựa cứng ecoplast cao cấp gec31
+url = https://tunhuamiennam.com/san-pham/giuong-lien-tu-nhua-cung-ecoplast-cao-cap-gec30-2/
 
 [giuongtang.mov.mn]
 match = -200.0%%
