--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-07 11:51:57
+lastsearch = 2024-08-07 18:27:28
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -352,9 +352,9 @@ title = buc anh dep - elle man - 18
 url = https://www.elleman.vn/van-hoa-giai-tri/buc-anh-dep-national-geographic-2018/attachment/screen-shot-2018-12-28-at-9-45-53-pm/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=YfANAAAAQAAJ&pg=PA7&lpg=PA7&dq=man+in+hoa+dep+18&source=bl&ots=iNPzZeg1Ll&sig=ACfU3U09sAUUawBO_4xZh9dexfMz992u8Q&hl=en&sa=X&ved=2ahUKEwiE-PK4--GHAxVtD0QIHUbcCdAQ6AF6BAg4EAM
+match = -158.8%%
+title = Bradshaw's monthly railway and steam navigation guide
+url = https://books.google.com/books?id=fjsGAAAAQAAJ&pg=RA2-PA41&lpg=RA2-PA41&dq=man+in+hoa+dep+18&source=bl&ots=__nukTMpWC&sig=ACfU3U0qO4ZVwV9xCyyIwxMG6qUyhEv-6g&hl=en&sa=X&ved=2ahUKEwiDjIeQ4-KHAxV_JUQIHY9-Iq8Q6AF6BAgkEAM
 
 [www.bankrate.com]
 match = 0.0%%
@@ -617,8 +617,8 @@ title = Home | CI D8
 url = https://www.dora.colorado.gov/
 
 [www.ag.idaho.gov]
-match = -29.4%%
-title = Idaho Open Meeting Law Manual
+match = 0.0%%
+title = 
 url = https://www.ag.idaho.gov/content/uploads/2018/04/OpenMeeting.pdf
 
 [www.michigan.gov]
@@ -645,4 +645,9 @@ url = https://tienphong.vn/choang-ngop-man-phao-hoa-dep-me-hoac-tren-song-han-po
 match = -188.2%%
 title = model covenants, conditions and restrictions for new and ...
 url = https://ffl.ifas.ufl.edu/media/fflifasufledu/docs/CCRs_Sept-20-2010_final.pdf
+
+[doi.colorado.gov]
+match = -58.8%%
+title = Home | DORA Division of Insurance
+url = https://doi.colorado.gov/
 
