--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-08-07 17:17:22
+lastsearch = 2024-08-07 18:12:19
 
 [shopee.vn]
 match = -216.7%%
@@ -59,7 +59,7 @@ url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 [www.lazada.vn]
 match = -258.3%%
 title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
-url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html?srsltid=AfmBOopjiKh7XAYoVASe926fKkCNX5efdLGA8egUxS1Q3Dy9secWKvSA
+url = https://www.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
 
 [vn.my-best.com]
 match = -233.3%%
