--- a/images/tham-giuong-bo-de-15/config.ini
+++ b/images/tham-giuong-bo-de-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-15.html
 lastopen = 2024-06-07 00:36:08
 
 [search]
-lastsearch = 2024-08-07 12:45:52
+lastsearch = 2024-08-07 18:17:41
 
 [www.diepxuan.com]
 match = 10.0%%
@@ -12,9 +12,9 @@ title = Thảm giường Bode 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/tham-giuong-bode-160x200.html
 
 [shopee.vn]
-match = -95.0%%
-title = Bộ Drap 4 món Ga giường thun lạnh HQ [ NỆM CAO 15- ...
-url = https://shopee.vn/Bộ-Drap-4-món-Ga-giường-thun-lạnh-HQ-NỆM-CAO-15-25CM-gồm-1-ga-2-vỏ-nằm-1-vỏ-ôm-i.177151023.20208763729
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [sofatoanquoc.com]
 match = 30.0%%
@@ -47,9 +47,9 @@ title = Bộ giường tủ cổ điển nhập khẩu GR B15
 url = https://greenfurni.vn/bo-giuong-tu-co-dien-nhap-khau-gr-b15/
 
 [noithattana.vn]
-match = -60.0%%
-title = Bộ Giường Tủ Gỗ MDF Hiện Đại Nhập Khẩu TA-D15
-url = https://noithattana.vn/san-pham/bo-giuong-tu-go-mdf-hien-dai-nhap-khau-ta-d11/
+match = -140.0%%
+title = Bộ giường ngủ tân cổ điển giá rẻ đẹp, cao cấp nhập khẩu ...
+url = https://noithattana.vn/giuong-tu-tan-co-dien/
 
 [tiki.vn]
 match = -50.0%%
