--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-07 14:56:58
+lastsearch = 2024-08-07 18:24:40
 
 [www.tui.co.uk]
-match = -250.0%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [uk.trip.com]
-match = -233.3%%
-title = Book Cheap TUI Airways Limited Flights to Seoul
+match = 0.0%%
+title = 
 url = https://uk.trip.com/flights/airline-by/thomson-airways-limited-flight-to-sel/
 
 [www.diepxuan.com]
@@ -222,9 +222,9 @@ title = WestJet and AMFA to resolve agreement via Binding ...
 url = https://avitrader.com/2024/06/28/westjet-and-amfa-to-resolve-agreement-via-binding-arbitration/
 
 [www.tuimusement.com]
-match = -325.0%%
-title = TUI Musement: Book Tickets for Experiences and Activities ...
-url = https://www.tuimusement.com/uk/
+match = -366.7%%
+title = Book Tickets for Experiences and Activities Worldwide | TUI ...
+url = https://www.tuimusement.com/us/
 
 [www.dixondirectional.com]
 match = -166.7%%
