CI images update

--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-08-07 17:20:11
+lastsearch = 2024-08-07 18:38:57
 
 [www.diepxuan.com]
 match = -20.0%%
@@ -205,4 +205,9 @@ url = https://svhtt.thuathienhue.gov.vn/Download.aspx?name=2455qd1.pdf&TuKhoa=vb
 match = -133.3%%
 title = Bộ chiếu mát Tencel than hoạt tính S-Cool - CT5
 url = https://hanvico.com.vn/san-pham/ct5/
+
+[www.asisov.org.vn]
+match = -146.7%%
+title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
+url = https://www.asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
