--- a/images/chieu-nhua-thai-binh-gt-180x300/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x300/config.ini
@@ -91,3 +91,8 @@ match = -18.2%%
 title = Khuon-phun-ep-nhua.pdf
 url = http://thuvienso.bvu.edu.vn/bitstream/TVDHBRVT/20754/1/Khuon-phun-ep-nhua.pdf
 
+[www.bacgiang.gov.vn]
+match = -21.1%%
+title = ubnd tỉnh bắc giang
+url = https://www.bacgiang.gov.vn/images/20181/155/019/794/410/2/1550197944102.pdf
+
