--- a/images/bo-chan-ga-goi-uc-cotton-16/config.ini
+++ b/images/bo-chan-ga-goi-uc-cotton-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-uc-cotton-16.html
 lastopen = 2024-06-07 00:26:06
 
 [search]
-lastsearch = 2024-08-07 13:01:20
+lastsearch = 2024-08-07 18:26:56
 
 [changagoidemsonghong.com]
-match = 18.5%%
-title = chăn ga gối cotton cao cấp Archives
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-cao-cap
+match = -55.6%%
+title = HOme Collection - dòng chăn ga gối cotton nhập khẩu hiệu ...
+url = https://changagoidemsonghong.com/home-collection
 
 [demhong.vn]
 match = 11.1%%
@@ -24,7 +24,7 @@ url = https://demviethong.com/chan-ga-goi-song-hong-uc16/
 [demxanh.com]
 match = 48.1%%
 title = Bộ ga gối hoạt hình Cotton CT16
-url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html
+url = https://demxanh.com/bo-ga-goi-hoat-hinh-cotton-ct16.html?srsltid=AfmBOopJjHU7F_eiA19I75jVznNclRnvWKjrulLMIjg6iXthkNwifCaG
 
 [chanrathanhthuy.com]
 match = -90.9%%
