--- a/images/chieu-nhua-ha-noi-10/config.ini
+++ b/images/chieu-nhua-ha-noi-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-10.html
 lastopen = 2024-06-09 23:36:00
 
 [search]
-lastsearch = 2024-08-07 09:55:28
+lastsearch = 2024-08-07 18:30:29
 
 [www.maihuyencorp.com]
 match = -85.0%%
@@ -54,7 +54,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html
 [www.lazada.vn]
 match = 10.0%%
 title = Chiếu Nhựa Chiếu Nhựa Hà Nội (1m8x4m)
-url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html?srsltid=AfmBOoq71i8hcDgcJwhhvcpnxJL9CuytiP99hc97TpDyoDZ5xugB79tG
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-ha-noi-1m8x4m-i1122564765-s3960456155.html
 
 [thuanloitrading.com]
 match = 10.0%%
