--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-08-07 13:53:30
+lastsearch = 2024-08-07 18:25:33
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -17,9 +17,9 @@ title = Davina Xanh (4/4/2024) - Athlete Awards
 url = https://bigwest.org/awards.aspx?aow=1106
 
 [www.imdb.com]
-match = -14.3%%
-title = The Jungle Book (2016)
-url = https://www.imdb.com/title/tt3040964/
+match = 0.0%%
+title = Green Book (2018)
+url = https://www.imdb.com/title/tt6966692/
 
 [www.etsy.com]
 match = 35.7%%
@@ -309,7 +309,7 @@ url = https://www.bernzomatic.com/appTehRq6feFR
 [dienmaycholon.com]
 match = -264.3%%
 title = Tổng hợp thông tin iPhone 16: Khi nào ra mắt và giá bao ...
-url = https://dienmaycholon.com/kinh-nghiem-mua-sam/tong-hop-thong-tin-iphone-16-khi-nao-ra-mat-gia-ban-bao-nhieu?srsltid=AfmBOorsfmS3_dVuSO1rT6m3_CZpIXPW0yd_Kqkz_VV2QOvYNlzXxtPF
+url = https://dienmaycholon.com/kinh-nghiem-mua-sam/tong-hop-thong-tin-iphone-16-khi-nao-ra-mat-gia-ban-bao-nhieu
 
 [www.tripadvisor.com]
 match = -242.9%%
@@ -405,4 +405,9 @@ url = https://www.premera.com/
 match = -128.6%%
 title = LA XANH RESTAURANT - Updated August 2024
 url = https://www.yelp.com/biz/la-xanh-restaurant-garland-2
+
+[twitter.com]
+match = -92.9%%
+title = beongoan - Váy Xanh (Boy George Fan)
+url = https://twitter.com/beongoan?lang=en
 
