--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-07 14:50:03
+lastsearch = 2024-08-07 18:37:54
 
 [www.everonvn.vn]
 match = 31.1%%
@@ -42,14 +42,14 @@ title = Nệm Lò Xo Everon - Đà Nẵng
 url = https://suongtuyet.com/nem-lo-xo-everon
 
 [www.everonqb.com]
-match = 19.1%%
-title = Everon Quảng Bình Nệm lò xo Everon Pocket 180x200x25
-url = https://www.everonqb.com/nem-lo-xo-everon-pocket-180x200x25.html
+match = 57.4%%
+title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27
+url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
 
 [www.diepxuan.com]
-match = 55.3%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 160x200x27 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-160x200x27.html
+match = 31.1%%
+title = Điệp Xuân Nệm lò xo Everon Bonnell 200x220x23
+url = https://www.diepxuan.com/nem-lo-xo-everon-bonnell-200x220x23.html
 
 [everon.online]
 match = 31.9%%
