--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-07 17:44:11
+lastsearch = 2024-08-07 18:36:07
 
 [www.everonvn.vn]
-match = 31.1%%
-title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
-url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
+match = 7.4%%
+title = ĐỆM LÒ XO EVERON, KING KOIL
+url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
 
 [everonkorea.com]
-match = 23.4%%
-title = Đệm lò xo Kingkoil Cloud Firm cao 27cm - Everon Korea
-url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-firm/
+match = 14.9%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm - Everon Korea
+url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
 match = 27.9%%
@@ -42,9 +42,9 @@ title = Nệm lò xo Everon Kingkoil Cloud Firm 180x200x27
 url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-180x200x27.html
 
 [everonvn.com.vn]
-match = 19.1%%
-title = Đệm Lò Xo King Koil Cloud Firm - chăn ga gối đệm Everon
-url = https://everonvn.com.vn/everon/1860/dem-lo-xo-kingkoil-everon-cloud-firm
+match = 42.6%%
+title = Đệm Lò Xo Everon, King Koil 【 Giảm 20%% 】HàngChính Hãng
+url = https://everonvn.com.vn/23/dem-lo-xo-everon
 
 [suongtuyet.com]
 match = -7.7%%
