--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-08-07 17:19:07
+lastsearch = 2024-08-07 18:58:27
 
 [shopee.vn]
 match = 56.2%%
@@ -315,4 +315,9 @@ url = https://quizlet.com/360580280/cau-hoi-nail-128-flash-cards/
 match = -18.8%%
 title = The Geographical Magazine
 url = https://books.google.com/books?id=oR1oAAAAcAAJ&pg=PA96-IA2&lpg=PA96-IA2&dq=chan+hoi+mai+rua&source=bl&ots=FeEsoxPTno&sig=ACfU3U314GBECUFp_9mctczoLi8QLTgtvg&hl=en&sa=X&ved=2ahUKEwjQhYKD9eGHAxU9EFkFHSjFEkMQ6AF6BAgiEAM
+
+[www.iucn.org]
+match = -100.0%%
+title = BẢO TỒN RÙA BIỂN - 101 CÂU HỎI VÀ TRẢ LỜI
+url = https://www.iucn.org/sites/default/files/2023-02/101-q-a-about-marine-turtle-conservation-final.pdf
 
