--- a/images/chieu-dieu-hoa-cao-su-180x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-180x200.html
 lastopen = 2024-07-01 06:28:11
 
 [search]
-lastsearch = 2024-08-07 16:57:20
+lastsearch = 2024-08-07 18:46:24
 
 [demxanh.com]
-match = 6.9%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 34.5%%
+title = Chiếu điều hòa cao su non Modern viền lụa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-modern-vien-lua.html
 
 [leflair.com]
 match = 6.9%%
