--- a/images/chieu-dieu-hoa-khong-goi-16/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-16.html
 lastopen = 2024-06-09 22:26:33
 
 [search]
-lastsearch = 2024-08-07 15:18:17
+lastsearch = 2024-08-07 18:51:37
 
 [demxanh.com]
 match = 25.9%%
@@ -17,9 +17,9 @@ title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
 url = https://shopee.vn/list/chiếu điều hòa
 
 [goni.vn]
-match = -33.3%%
-title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa không
-url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
+match = 14.8%%
+title = Chiếu Điều Hòa Goni - Ưu Đãi Tháng 08/2024
+url = https://goni.vn/chieu-dieu-hoa-goni/
 
 [tiki.vn]
 match = 33.3%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [suongtuyet.com]
-match = 18.5%%
-title = có nên sử dụng chiếu điều hòa không?
-url = https://suongtuyet.com/chieu-dieu-hoa-co-nen-su-dung-chieu-dieu-hoa-khong.html
+match = -29.6%%
+title = Có Mấy Loại Chiếu Điều Hòa? Chiếu Điều Hòa Loại Nào ...
+url = https://suongtuyet.com/nen-su-dung-chieu-dieu-hoa-loai-nao-chieu-dieu-hoa-loai-nao-tot.html
 
 [nclvn.com]
 match = -44.4%%
@@ -57,9 +57,9 @@ title = 10 Cách Khắc Phục Điều Hòa Để 16 Độ Không Mát Hiệu ..
 url = https://hc.com.vn/ords/nnews/dieu-hoa-de-16-do-khong-mat
 
 [www.lazada.vn]
-match = 11.1%%
-title = Chiếu điều hòa mây lạnh cao cấp 2 lớp, loại 1
-url = https://www.lazada.vn/products/chieu-dieu-hoa-may-lanh-cao-cap-2-lop-loai-1-khong-kem-vo-goi-i2619391351.html
+match = -14.8%%
+title = Chiếu Mây Điều Hòa Hàng Xuất Khẩu Cao Cấp,Đủ kích cỡ
+url = https://www.lazada.vn/products/chieu-may-soi-nho-dieu-hoa-chieu-dieu-hoa-16-x-19m-chieu-may-dieu-hoa-hang-xuat-khau-cao-capdu-kich-co-chieu-du-lich-chieu-an-com-chieu-trai-giuong-i2106465649.html
 
 [phatdatbinhthoi.com.vn]
 match = -14.8%%
