--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-08-07 18:41:50
+lastsearch = 2024-08-07 18:57:03
 
 [thegioidemviet.vn]
-match = 21.4%%
-title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
-url = https://thegioidemviet.vn/chieu-truc/
+match = 35.7%%
+title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
+url = https://thegioidemviet.vn/chieu-truc-que-lam/
 
 [chieutrelanlan.com]
-match = 25.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = 10.7%%
+title = Chiếu trúc quế lâm màu trắng không viền 180x200cm
+url = https://chieutrelanlan.com/chieu-truc-que-lam-mau-trang-khong-vien-180x200cm-39.html
 
 [www.facebook.com]
 match = 71.4%%
@@ -27,9 +27,9 @@ title = CHIẾU TRÚC QUẾ LÂM MẮT NGỌC KHÔNG HOA VĂN ...
 url = https://shopee.vn/CHIẾU-TRÚC-QUẾ-LÂM-MẮT-NGỌC-KHÔNG-HOA-VĂN-HÀNG-LOẠI-1-BÓNG-ĐẸP-i.444652147.14296554126
 
 [demxanh.com]
-match = -7.1%%
-title = Chiếu trúc hạt Quế Lâm hạt vàng 100x190cm hàng loại 1
-url = https://demxanh.com/chieu-truc-hat-que-lam-hat-vang.html
+match = -25.0%%
+title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
+url = https://demxanh.com/chieu-truc.html
 
 [tiki.vn]
 match = -39.3%%
