--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-07 18:31:36
+lastsearch = 2024-08-07 18:59:08
 
 [www.lazada.vn]
 match = -61.1%%
 title = Orangesky Cần Câu Cá Biển Yuantou ...
-url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
+url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html?srsltid=AfmBOop-Ifhah-Yj2C5zeoVkUISWBMxQBNFL8TL-ADy2ETMvnMR--21e
 
 [www.facebook.com]
-match = -5.6%%
-title = Nem Nướng Mỗ Lao - Hà Đông
-url = https://www.facebook.com/story.php/?story_fbid=767320398760395&id=100064473260604
+match = -18.2%%
+title = NEM Fashion
+url = https://www.facebook.com/nemfashion.official/?locale=ms_MY
 
 [thegioinem.com]
 match = -55.6%%
@@ -54,12 +54,12 @@ url = https://www.tiktok.com/discover/how-long-to-cook-nem-nuong-in-air-fryer
 [www.diepxuan.com]
 match = 11.1%%
 title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+url = https://www.diepxuan.com/nem-sieu-nhe.html?srsltid=AfmBOooJ4BW-OoJcO9tRUrIkUx9RoNx3CNqw_29VEowIfmwml7ufUIvS
 
 [m.facebook.com]
-match = -94.4%%
-title = Người Việt Bolsa/Orange County | ❤️‍🔥❤️‍🔥NEM CHUA ...
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2893614240788940/
+match = -133.3%%
+title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
+url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
 
 [emartmall.com.vn]
 match = 0.0%%
