--- a/images/tui-warmdream-15/config.ini
+++ b/images/tui-warmdream-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-15.html
 lastopen = 2024-06-10 00:24:28
 
 [search]
-lastsearch = 2024-08-07 17:19:48
+lastsearch = 2024-08-07 18:58:06
 
 [www.lazada.vn]
 match = -212.5%%
@@ -23,8 +23,8 @@ url = https://noveltoon.vn/vi/watch/1965107/7048058
 
 [www.tiktok.com]
 match = -206.2%%
-title = #lipstick #foryou #foryoupage #fyp #meccamaxima #nars ...
-url = https://www.tiktok.com/@saramakeup.jpeg/video/6999173807848148226
+title = Huda beauty lipstick shade ‘buttercup’ thank me later ...
+url = https://www.tiktok.com/@megxfenwick/video/7321757021164932384
 
 [eastcoastbeddingusa.com]
 match = -125.0%%
