--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-07 14:46:35
+lastsearch = 2024-08-07 19:40:11
 
 [www.tiktok.com]
 match = -235.3%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -194.1%%
-title = The Globe Pronouncing Gazetteer of the World: Descriptive ...
-url = https://books.google.com/books?id=tBMXAAAAYAAJ&pg=PA426&lpg=PA426&dq=man+in+hoa+dep+16&source=bl&ots=FE9QZkrQcD&sig=ACfU3U0t0OGw70VQkjyf-KU2oFB1kcwuyg&hl=en&sa=X&ved=2ahUKEwirspHgseKHAxW4EVkFHfwJFO4Q6AF6BAgaEAM
+match = -229.4%%
+title = Lexicon Palaeslovenico-Græco-Latinum emendatum auctum edidit ...
+url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyW-DdhMf&sig=ACfU3U1OFumg8HwIPJWO-1dzVpXRUqsUBA&hl=en&sa=X&ved=2ahUKEwiWr6Ww8-KHAxW4FlkFHTp5BewQ6AF6BAgrEAM
 
 [tax.vermont.gov]
 match = -29.4%%
