--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-07 11:36:13
+lastsearch = 2024-08-07 19:37:01
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -13,8 +13,8 @@ url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-g
 
 [demxanh.com]
 match = 38.7%%
-title = Chăn ga gối Singapore lụa 5 món L5M18
-url = https://demxanh.com/chan-ga-goi-singapore-lua-5-mon-l5m18.html
+title = Bộ chăn ga gối Singapore King Luxury KL2418
+url = https://demxanh.com/bo-chan-ga-goi-singapore-king-luxury-kl2418.html
 
 [songhongonline.vn]
 match = 50.0%%
@@ -62,9 +62,9 @@ title = LIZD™ chăn ga gối đệm
 url = http://lizd.vn/index.php?route=product/manufacturer/info&manufacturer_id=10
 
 [ninhouse.vn]
-match = 45.2%%
-title = 1 bộ chăn ga gối đệm bao nhiêu tiền?
-url = https://ninhouse.vn/blogs/news/1-bo-chan-ga-goi-dem-bao-nhieu-tien
+match = -22.6%%
+title = Bảng giá bộ chăn ga gối gia đình giá rẻ tại Tphcm mới nhất ...
+url = https://ninhouse.vn/collections/bo-chan-ga-goi-gia-dinh
 
 [hantexco.vn]
 match = 51.9%%
