--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-07 17:45:21
+lastsearch = 2024-08-07 19:28:45
 
 [everon.online]
-match = -44.4%%
-title = Bộ Everon EPM24061
-url = https://everon.online/products/bo-everon-epm24061
+match = 50.0%%
+title = Bộ Ga Chun Chần Everon Bốn Mùa ...
+url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 
 [nem.vn]
 match = 5.9%%
@@ -27,9 +27,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [vuanem.com]
-match = 5.9%%
-title = Mua Bộ Ga Chun Chần Chất Lượng - Cao Cấp - Giá Tốt Nhất
-url = https://vuanem.com/chan-ga-goi/bo-ga-chun-chan
+match = 14.7%%
+title = Bộ Ga chun chăn chần Everon bốn mùa 4 chi tiết màu ...
+url = https://vuanem.com/bo-ga-chun-chan-chan-everon-EST23034.html
 
 [everonvn.com.vn]
 match = 32.1%%
