--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-08-07 11:37:35
+lastsearch = 2024-08-07 19:30:04
 
 [shopee.vn]
-match = -25.9%%
-title = chăn lông cừu 4kids thái lan giá tốt Tháng 7, 2024
-url = https://shopee.vn/search?keyword=chăn lông cừu 4kids thái lan
+match = -11.1%%
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung ...
+url = https://shopee.vn/-CHUYÊN-SỈ-🌺-chăn-băng-lông-tuyết-nhung-chăn-Tuyết-Sin-Thái-Lan-cho-mùa-đông-ấm-áp-loại-3kg-4kg-5kg-i.126028938.15195323838
 
 [www.lazada.vn]
 match = -11.1%%
@@ -17,9 +17,9 @@ title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
 url = https://www.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690.html
 
 [tiki.vn]
-match = 11.1%%
-title = Chăn nhung tuyết hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn nhung tuyết
+match = 7.4%%
+title = Chăn lông 4 kg hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn lông 4 kg
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -47,9 +47,9 @@ title = Chăn Lông Cừu Tuyết YUKI Siêu Ấm Nặng 4kg Chính ...
 url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-hang-men-yuki-day-min-kich-thuoc-2mx2m3-hang-xuat-nhat-gia-ib-a-2129967.html
 
 [www.youtube.com]
-match = -66.7%%
-title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
-url = https://www.youtube.com/watch?v=XHN7YU5NYi4
+match = -74.1%%
+title = Cựu Thủ tướng Thái Lan Thaksin được trả tự do - Tin thế giới ...
+url = https://www.youtube.com/watch?v=zGtjB2l6au4
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -147,9 +147,9 @@ title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
 url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
-match = 7.4%%
-title = Chăn tuyết đa sắc 2.5kg màu hồng nhạt
-url = https://demxanh.com/chan-long-tuyet-da-sac-2.5kg-mau-hong-nhat.html
+match = 11.1%%
+title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
 
 [vnvc.vn]
 match = -59.3%%
