--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-08-07 18:18:02
+lastsearch = 2024-08-07 19:24:30
 
 [demxanh.com]
 match = 34.5%%
@@ -12,14 +12,14 @@ title = Chiếu điều hòa cao su non Tencel xanh nhạt
 url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [entershopping.vn]
-match = -13.8%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển - chăn ga gối
-url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+match = 3.4%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Hà Nội
+url = https://entershopping.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [thegioichieutruc.com]
-match = 51.7%%
-title = Chiếu điều hòa cao su non Tencel ghi
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-ghi/
+match = -31.0%%
+title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
 
 [demchinhhang.com]
 match = -20.7%%
@@ -27,9 +27,9 @@ title = [RẺ NHẤT] Chiều điều hòa cao su non Latex mẫu mới siêu ..
 url = https://demchinhhang.com/collections/chieu-dieu-hoa-cao-su-non
 
 [changagoidemdep.vn]
-match = -10.3%%
-title = Chiếu điều hòa cao su non Tencel Ghi - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-ghi.html
+match = -27.6%%
+title = Chiếu điều hòa cao su non Tencel vàng đậm - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-vang-dam.html
 
 [khodem.vn]
 match = 55.2%%
