--- a/images/chieu-dieu-hoa-cao-su-160x200/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-160x200.html
 lastopen = 2024-07-01 06:44:23
 
 [search]
-lastsearch = 2024-08-07 17:53:01
+lastsearch = 2024-08-07 19:36:00
 
 [demxanh.com]
-match = 27.6%%
-title = Chiếu điều hòa cao su non Tencel vàng chanh
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-vang-chanh.html
+match = 24.1%%
+title = Chiếu điều hòa cao su non đa sắc xám hình hoa
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-da-sac-xam-hinh-hoa.html?srsltid=AfmBOoot8BTzSAZyIOtVmwRWvjiF00teWz7H3viRpp6sc9X9g_KY-ah9
 
 [tiki.vn]
 match = 20.7%%
 title = Mua Chiếu Điều Hòa Cao Su Non Latex Loại 1 Màu
-url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=136632823
+url = https://tiki.vn/chieu-dieu-hoa-cao-su-non-latex-loai-1-mau-p136632708.html?spid=263307862
 
 [demchinhhang.com]
 match = 51.7%%
@@ -24,7 +24,7 @@ url = https://demchinhhang.com/products/chieu-dieu-hoa-cao-su-01
 [www.lazada.vn]
 match = -17.2%%
 title = chiếu điều hòa cao su non QH home mềm mịn thoáng mát ...
-url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html
+url = https://www.lazada.vn/products/chieu-dieu-hoa-cao-su-non-qh-home-mem-min-thoang-mat-bo-vien-chac-chansize-160x200-180x200-220x200-i1938081279.html?srsltid=AfmBOopqjYVoZZca8hQY30bVmR6xUCw2CIUaea0HYom6C9Nb_l4ioRdT
 
 [nanara.vn]
 match = 34.5%%
@@ -57,9 +57,9 @@ title = chiếu điều hoà cao su non 2d+ plush
 url = https://thegioidemviet.vn/chieu-dieu-hoa-cao-su-non-2d-plush/
 
 [foreverbedding.net]
-match = -37.9%%
-title = Những Thông Tin Cần Biết Khi Mua Chiếu Điều Hoà Cao Su ...
-url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-la-gi
+match = 17.2%%
+title = Chiếu Điều Hoà Cao Su Non Có Chống Thấm Không?
+url = https://foreverbedding.net/chieu-dieu-hoa-cao-su-non-co-chong-tham-khong?srsltid=AfmBOoqBMR_KlWKMlA1BoETg1d8d8jEbddniG9n5jWw2eEdeIaFfrqLl
 
 [russo.vn]
 match = -17.2%%
