--- a/images/chieu-dieu-hoa-lua-160x200/config.ini
+++ b/images/chieu-dieu-hoa-lua-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 lastopen = 2024-08-02 20:47:57
 
 [search]
-lastsearch = 2024-08-07 16:24:25
+lastsearch = 2024-08-07 19:32:55
 
 [demxanh.com]
-match = 34.6%%
-title = Chiếu điều hòa mây viền lụa loại đẹp
-url = https://demxanh.com/chieu-dieu-hoa-may-vien-lua.html
+match = -15.4%%
+title = Chiếu điều hòa lụa cao cấp giá rẻ nhất thị trường
+url = https://demxanh.com/chieu-dieu-hoa-lua-cao-cap.html
 
 [thegioidemviet.vn]
 match = -15.4%%
@@ -37,9 +37,9 @@ title = Chiếu điều hòa lụa 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-dieu-hoa-lua-160x200.html
 
 [shopee.vn]
-match = -53.8%%
-title = Chiếu điều hoà sợi mây tự nhiên chiếu mát Forever 2 lớp ...
-url = https://shopee.vn/Chiếu-điều-hoà-sợi-mây-tự-nhiên-chiếu-mát-Forever-2-lớp-vải-3D-than-hoạt-tính-không-mùi-kháng-khuẩn-chống-nấm-mốc-i.461791417.9279375114
+match = -30.8%%
+title = Chiếu Điều Hòa Lụa Dày các cỡ 1.2m - 1.5m - 1.6m - 1.8m
+url = https://shopee.vn/Chiếu-Điều-Hòa-Lụa-Dày-các-cỡ-1.2m-1.5m-1.6m-1.8m-2m-i.331106991.12046528350
 
 [www.lazada.vn]
 match = 42.3%%
@@ -57,9 +57,9 @@ title = Chiếu điều hòa mây viền lụa loại đẹp
 url = https://thegioidemonline.com/chieu-dieu-hoa-may-vien-lua-loai-dep.html
 
 [thegioichieutruc.com]
-match = -11.5%%
-title = Chiếu cao su non Coco bo chun màu xanh rêu
-url = https://thegioichieutruc.com/chieu-cao-su-non-coco-bo-chun-mau-xanh-reu/
+match = -65.4%%
+title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
 
 [nasago.vn]
 match = -50.0%%
