--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-08-07 17:57:56
+lastsearch = 2024-08-07 19:33:36
 
 [demdreamland.vn]
 match = 25.6%%
@@ -27,9 +27,9 @@ title = Đệm cao su Thiên Nhiên Hoàng Gia - 16cm
 url = http://dreamland.vn/Dem-cao-su-Thien-Nhien-Hoang-Gia---16cm-i4417.html
 
 [demviethome.vn]
-match = 7.0%%
-title = Đệm cao su Kim Cương princess diamond luxury giá rẻ hà ...
-url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/
+match = 30.2%%
+title = Đệm bông ép Dreamland giá rẻ tốt nhất tại Hà Nội
+url = https://demviethome.vn/dem-bong-ep-dreamland/
 
 [thegioidemdep.com]
 match = 7.0%%
