--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-07 13:49:38
+lastsearch = 2024-08-07 19:41:36
 
 [www.everonvn.vn]
 match = 0.0%%
@@ -12,14 +12,14 @@ title =
 url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-45-x-65.html
 
 [shopee.vn]
-match = -100.0%%
-title = Ruột gối hơi bông gòn cao cấp kháng khuẩn mẫu hoa nhí ...
-url = https://shopee.vn/Ruột-gối-hơi-bông-gòn-cao-cấp-kháng-khuẩn-mẫu-hoa-nhí-kích-thước-45x65cm-i.441837062.20823110424
+match = -85.7%%
+title = Ruột gối Everon siêu êm Classic Soft 45x65 (Độ cao: 16cm)
+url = https://shopee.vn/Ruột-gối-Everon-siêu-êm-Classic-Soft-45x65-(Độ-cao-16cm)-i.34660875.10533606712
 
 [www.diepxuan.com]
-match = 42.9%%
-title = Ruột gối kê hoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
+match = 4.8%%
+title = Ruột gối kê Warmdream 45x65 - Điệp Xuân
+url = https://www.diepxuan.com/ruot-goi-ke-warmdream-45x65.html
 
 [elambo.vn]
 match = -90.5%%
