--- a/images/tam-trai-ks/config.ini
+++ b/images/tam-trai-ks/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tam-trai-ks.html
 lastopen = 2024-06-07 00:26:12
 
 [search]
-lastsearch = 2024-08-07 17:54:46
+lastsearch = 2024-08-07 19:35:18
 
 [www.linkedin.com]
-match = -172.7%%
-title = Tam Tran - Wichita, Kansas, United States
-url = https://www.linkedin.com/in/tam-tran-0a0005213
+match = -145.5%%
+title = Tam Tram - Kansas Army National Guard
+url = https://www.linkedin.com/in/tam-tram-a3286573
 
 [sos.ks.gov]
 match = -9.1%%
@@ -67,9 +67,9 @@ title = Mt Tam Trail Map, (Mount Tamalpais State Park) California ...
 url = https://www.ebay.com/itm/234042671995
 
 [www.runguides.com]
-match = -145.5%%
-title = 2024 Mt. Tam Trail Run | Mill Valley
-url = https://www.runguides.com/event/4688/mt-tam-trail-run
+match = -336.4%%
+title = San Francisco Bay Area Running Race Calendar - 2024/25
+url = https://www.runguides.com/san-francisco/runs
 
 [www.kategridley.com]
 match = -125.0%%
@@ -157,9 +157,9 @@ title = Battle of Huế
 url = https://en.wikipedia.org/wiki/Battle_of_Huế
 
 [www.compass.com]
-match = -272.7%%
-title = 6736 Tim Tam Trail, Tallahassee, FL 32309 | Compass
-url = https://www.compass.com/listing/6736-tim-tam-trail-tallahassee-fl-32309/1242017324837188313/
+match = -254.5%%
+title = 8051 Tim Tam Trail, Evergreen, CO 80439 | Compass
+url = https://www.compass.com/listing/8051-tim-tam-trail-evergreen-co-80439/136738894447227057/
 
 [www.deere.com]
 match = -218.2%%
@@ -332,9 +332,9 @@ title = Upcoming Half Marathon Trail Runs in the USA
 url = https://www.runningintheusa.com/classic/list/map/half-marathon/upcoming/trail-run
 
 [www.tiktok.com]
-match = -27.3%%
-title = Ks Tam (@fathertam)
-url = https://www.tiktok.com/@fathertam
+match = -18.2%%
+title = Thai Villa Nyc Srk
+url = https://www.tiktok.com/discover/thai-villa-nyc-srk
 
 [www.movemint.cc]
 match = 0.0%%
